Bug 1918730 - Run speedometer3 on windows 11 reference hardware. r=perftest-reviewers,kshampur
Differential Revision: https://phabricator.services.mozilla.com/D226495

UltraBlame original commit: 01e12df9a50ce0ba04e259dfc4742cec2fda6d3e

--- a/taskcluster/kinds/test/browsertime-desktop.yml
+++ b/taskcluster/kinds/test/browsertime-desktop.yml
@@ -2030,6 +2030,40 @@ default
 speedometer3
 sp3
 ]
+windows11
+-
+64
+-
+.
+*
+-
+hw
+-
+ref
+.
+*
+:
+by
+-
+app
+:
+safari
+:
+[
+]
+safari
+-
+tp
+:
+[
+]
+default
+:
+-
+[
+speedometer3
+sp3
+]
 default
 :
 by
@@ -2644,6 +2678,26 @@ qr
 [
 trunk
 ]
+windows11
+-
+64
+-
+.
+*
+-
+hw
+-
+ref
+-
+shippable
+.
+*
+:
+[
+mozilla
+-
+central
+]
 .
 *
 nightlyasrelease
@@ -2680,6 +2734,26 @@ windows
 shippable
 -
 qr
+.
+*
+:
+[
+mozilla
+-
+central
+]
+windows11
+-
+64
+-
+.
+*
+-
+hw
+-
+ref
+-
+shippable
 .
 *
 :
