--- a/taskcluster/kinds/test/test-sets.yml
+++ b/taskcluster/kinds/test/test-sets.yml
@@ -577,16 +577,6 @@ talos
 webgl
 -
 profiling
-talos
--
-ref
--
-hw
-:
--
-talos
--
-webgl
 #
 Bug
 1909894
@@ -809,6 +799,16 @@ benchmark
 browsertime
 -
 tp6
+browsertime
+-
+ref
+-
+hw
+:
+-
+browsertime
+-
+benchmark
 awsy
 :
 -
