Bug 1925782 - LSNG: Add a pref for migration from archived database; r=dom-storage-reviewers,jari
Differential Revision: https://phabricator.services.mozilla.com/D226238

UltraBlame original commit: 2ce800c6762484320c67c63498174a6385daf8f3

--- a/modules/libpref/init/StaticPrefList.yaml
+++ b/modules/libpref/init/StaticPrefList.yaml
@@ -26773,6 +26773,34 @@ do_not_use_directly
 :
 true
 #
+Whether
+the
+migration
+from
+unsupported
+legacy
+implementation
+is
+enabled
+.
+-
+name
+:
+dom
+.
+storage
+.
+enable_migration_from_unsupported_legacy_implementation
+type
+:
+RelaxedAtomicBool
+value
+:
+true
+mirror
+:
+always
+#
 The
 amount
 of
