Bug 1925782 - LSNG: Disable migration from archived database; r=dom-storage-reviewers,jari
Differential Revision: https://phabricator.services.mozilla.com/D226239

UltraBlame original commit: 75cde564a598848d8d9138cfa876303dcdbefb5b

--- a/dom/localstorage/test/unit/xpcshell.toml
+++ b/dom/localstorage/test/unit/xpcshell.toml
@@ -453,11 +453,37 @@ test_migration
 js
 "
 ]
+prefs
+=
+[
+"
+dom
+.
+storage
+.
+enable_migration_from_unsupported_legacy_implementation
+=
+true
+"
+]
 [
 "
 test_migration_emptyValue
 .
 js
+"
+]
+prefs
+=
+[
+"
+dom
+.
+storage
+.
+enable_migration_from_unsupported_legacy_implementation
+=
+true
 "
 ]
 support
@@ -579,11 +605,37 @@ test_stringLength
 js
 "
 ]
+prefs
+=
+[
+"
+dom
+.
+storage
+.
+enable_migration_from_unsupported_legacy_implementation
+=
+true
+"
+]
 [
 "
 test_stringLength2
 .
 js
+"
+]
+prefs
+=
+[
+"
+dom
+.
+storage
+.
+enable_migration_from_unsupported_legacy_implementation
+=
+true
 "
 ]
 [
@@ -612,5 +664,18 @@ js
 test_usageAfterMigration
 .
 js
+"
+]
+prefs
+=
+[
+"
+dom
+.
+storage
+.
+enable_migration_from_unsupported_legacy_implementation
+=
+true
 "
 ]
