--- a/dom/quota/test/xpcshell/upgrades/xpcshell.toml
+++ b/dom/quota/test/xpcshell/upgrades/xpcshell.toml
@@ -203,6 +203,19 @@ test_localStorageArchive4upgrade
 js
 "
 ]
+prefs
+=
+[
+"
+dom
+.
+storage
+.
+enable_migration_from_unsupported_legacy_implementation
+=
+true
+"
+]
 [
 "
 test_localStorageArchiveDowngrade
