--- a/mobile/android/fenix/app/nimbus.fml.yaml
+++ b/mobile/android/fenix/app/nimbus.fml.yaml
@@ -3436,6 +3436,36 @@ Boolean
 default
 :
 false
+networking
+:
+description
+:
+Enables
+networking
+features
+variables
+:
+fetchPriorityEnabled
+:
+description
+:
+>
+Enables
+or
+disables
+network
+.
+fetchpriority
+.
+enabled
+preference
+.
+type
+:
+Boolean
+default
+:
+true
 types
 :
 objects
