Bug 1925865 - Add showOtherBookmarks to feature manifest r=mviar
Differential Revision: https://phabricator.services.mozilla.com/D226351

UltraBlame original commit: 7c6e84af90c1c1e47f12d3613c04465eb9ee41f1

--- a/toolkit/components/nimbus/FeatureManifest.yaml
+++ b/toolkit/components/nimbus/FeatureManifest.yaml
@@ -20784,6 +20784,38 @@ show
 on
 newtab
 .
+showOtherBookmarks
+:
+type
+:
+boolean
+setPref
+:
+branch
+:
+user
+pref
+:
+browser
+.
+toolbars
+.
+bookmarks
+.
+showOtherBookmarks
+description
+:
+Display
+state
+of
+the
+"
+Other
+Bookmarks
+"
+toolbar
+button
+.
 cookieBannerHandling
 :
 description
