--- a/testing/web-platform/meta/editing/other/delete-before-invisible-line-break.html.ini
+++ b/testing/web-platform/meta/editing/other/delete-before-invisible-line-break.html.ini
@@ -256,6 +256,462 @@ expected
 :
 FAIL
 [
+document
+.
+execCommand
+(
+"
+delete
+"
+)
+when
+<
+p
+>
+a
+[
+\
+]
+<
+br
+>
+<
+/
+p
+>
+]
+expected
+:
+FAIL
+[
+Backspace
+when
+<
+p
+>
+a
+[
+\
+]
+<
+br
+>
+<
+/
+p
+>
+]
+expected
+:
+FAIL
+[
+document
+.
+execCommand
+(
+"
+delete
+"
+)
+when
+<
+p
+>
+a
+[
+\
+]
+<
+br
+>
+<
+/
+p
+>
+]
+expected
+:
+FAIL
+[
+Backspace
+when
+<
+p
+>
+a
+[
+\
+]
+<
+br
+>
+<
+/
+p
+>
+]
+expected
+:
+FAIL
+[
+document
+.
+execCommand
+(
+"
+delete
+"
+)
+when
+<
+p
+>
+a
+[
+\
+]
+\
+\
+n
+<
+/
+p
+>
+]
+expected
+:
+FAIL
+[
+Backspace
+when
+<
+p
+>
+a
+[
+\
+]
+\
+\
+n
+<
+/
+p
+>
+]
+expected
+:
+FAIL
+[
+document
+.
+execCommand
+(
+"
+delete
+"
+)
+when
+<
+p
+>
+a
+[
+\
+]
+\
+\
+n
+<
+/
+p
+>
+]
+expected
+:
+FAIL
+[
+Backspace
+when
+<
+p
+>
+a
+[
+\
+]
+\
+\
+n
+<
+/
+p
+>
+]
+expected
+:
+FAIL
+[
+document
+.
+execCommand
+(
+"
+delete
+"
+)
+when
+<
+div
+>
+a
+[
+\
+]
+<
+br
+>
+<
+div
+>
+b
+<
+/
+div
+>
+<
+/
+div
+>
+]
+expected
+:
+FAIL
+[
+Backspace
+when
+<
+div
+>
+a
+[
+\
+]
+<
+br
+>
+<
+div
+>
+b
+<
+/
+div
+>
+<
+/
+div
+>
+]
+expected
+:
+FAIL
+[
+document
+.
+execCommand
+(
+"
+delete
+"
+)
+when
+<
+div
+>
+a
+[
+\
+]
+<
+br
+>
+<
+div
+>
+b
+<
+/
+div
+>
+<
+/
+div
+>
+]
+expected
+:
+FAIL
+[
+Backspace
+when
+<
+div
+>
+a
+[
+\
+]
+<
+br
+>
+<
+div
+>
+b
+<
+/
+div
+>
+<
+/
+div
+>
+]
+expected
+:
+FAIL
+[
+document
+.
+execCommand
+(
+"
+delete
+"
+)
+when
+<
+div
+>
+a
+[
+\
+]
+\
+\
+n
+<
+div
+>
+b
+<
+/
+div
+>
+<
+/
+div
+>
+]
+expected
+:
+FAIL
+[
+Backspace
+when
+<
+div
+>
+a
+[
+\
+]
+\
+\
+n
+<
+div
+>
+b
+<
+/
+div
+>
+<
+/
+div
+>
+]
+expected
+:
+FAIL
+[
+document
+.
+execCommand
+(
+"
+delete
+"
+)
+when
+<
+div
+>
+a
+[
+\
+]
+\
+\
+n
+<
+div
+>
+b
+<
+/
+div
+>
+<
+/
+div
+>
+]
+expected
+:
+FAIL
+[
+Backspace
+when
+<
+div
+>
+a
+[
+\
+]
+\
+\
+n
+<
+div
+>
+b
+<
+/
+div
+>
+<
+/
+div
+>
+]
+expected
+:
+FAIL
+[
 delete
 -
 before
@@ -275,6 +731,934 @@ space
 pre
 ]
 [
+document
+.
+execCommand
+(
+"
+delete
+"
+)
+when
+<
+p
+>
+a
+[
+\
+]
+<
+br
+>
+<
+/
+p
+>
+]
+expected
+:
+FAIL
+[
+Backspace
+when
+<
+p
+>
+a
+[
+\
+]
+<
+br
+>
+<
+/
+p
+>
+]
+expected
+:
+FAIL
+[
+document
+.
+execCommand
+(
+"
+delete
+"
+)
+when
+<
+p
+>
+a
+[
+\
+]
+<
+br
+>
+<
+/
+p
+>
+]
+expected
+:
+FAIL
+[
+Backspace
+when
+<
+p
+>
+a
+[
+\
+]
+<
+br
+>
+<
+/
+p
+>
+]
+expected
+:
+FAIL
+[
+document
+.
+execCommand
+(
+"
+delete
+"
+)
+when
+<
+p
+>
+a
+b
+[
+\
+]
+<
+br
+>
+<
+/
+p
+>
+]
+expected
+:
+FAIL
+[
+Backspace
+when
+<
+p
+>
+a
+b
+[
+\
+]
+<
+br
+>
+<
+/
+p
+>
+]
+expected
+:
+FAIL
+[
+document
+.
+execCommand
+(
+"
+delete
+"
+)
+when
+<
+p
+>
+a
+[
+b
+\
+]
+<
+br
+>
+<
+/
+p
+>
+]
+expected
+:
+FAIL
+[
+Backspace
+when
+<
+p
+>
+a
+[
+b
+\
+]
+<
+br
+>
+<
+/
+p
+>
+]
+expected
+:
+FAIL
+[
+document
+.
+execCommand
+(
+"
+delete
+"
+)
+when
+<
+p
+>
+a
+[
+\
+]
+\
+\
+n
+<
+/
+p
+>
+]
+expected
+:
+FAIL
+[
+Backspace
+when
+<
+p
+>
+a
+[
+\
+]
+\
+\
+n
+<
+/
+p
+>
+]
+expected
+:
+FAIL
+[
+document
+.
+execCommand
+(
+"
+delete
+"
+)
+when
+<
+p
+>
+a
+[
+\
+]
+\
+\
+n
+<
+/
+p
+>
+]
+expected
+:
+FAIL
+[
+Backspace
+when
+<
+p
+>
+a
+[
+\
+]
+\
+\
+n
+<
+/
+p
+>
+]
+expected
+:
+FAIL
+[
+document
+.
+execCommand
+(
+"
+delete
+"
+)
+when
+<
+p
+>
+a
+b
+[
+\
+]
+\
+\
+n
+<
+/
+p
+>
+]
+expected
+:
+FAIL
+[
+Backspace
+when
+<
+p
+>
+a
+b
+[
+\
+]
+\
+\
+n
+<
+/
+p
+>
+]
+expected
+:
+FAIL
+[
+document
+.
+execCommand
+(
+"
+delete
+"
+)
+when
+<
+p
+>
+a
+[
+b
+\
+]
+\
+\
+n
+<
+/
+p
+>
+]
+expected
+:
+FAIL
+[
+Backspace
+when
+<
+p
+>
+a
+[
+b
+\
+]
+\
+\
+n
+<
+/
+p
+>
+]
+expected
+:
+FAIL
+[
+document
+.
+execCommand
+(
+"
+delete
+"
+)
+when
+<
+div
+>
+a
+[
+\
+]
+<
+br
+>
+<
+div
+>
+b
+<
+/
+div
+>
+<
+/
+div
+>
+]
+expected
+:
+FAIL
+[
+Backspace
+when
+<
+div
+>
+a
+[
+\
+]
+<
+br
+>
+<
+div
+>
+b
+<
+/
+div
+>
+<
+/
+div
+>
+]
+expected
+:
+FAIL
+[
+document
+.
+execCommand
+(
+"
+delete
+"
+)
+when
+<
+div
+>
+a
+[
+\
+]
+<
+br
+>
+<
+div
+>
+b
+<
+/
+div
+>
+<
+/
+div
+>
+]
+expected
+:
+FAIL
+[
+Backspace
+when
+<
+div
+>
+a
+[
+\
+]
+<
+br
+>
+<
+div
+>
+b
+<
+/
+div
+>
+<
+/
+div
+>
+]
+expected
+:
+FAIL
+[
+document
+.
+execCommand
+(
+"
+delete
+"
+)
+when
+<
+div
+>
+a
+b
+[
+\
+]
+<
+br
+>
+<
+div
+>
+b
+<
+/
+div
+>
+<
+/
+div
+>
+]
+expected
+:
+FAIL
+[
+Backspace
+when
+<
+div
+>
+a
+b
+[
+\
+]
+<
+br
+>
+<
+div
+>
+b
+<
+/
+div
+>
+<
+/
+div
+>
+]
+expected
+:
+FAIL
+[
+document
+.
+execCommand
+(
+"
+delete
+"
+)
+when
+<
+div
+>
+a
+[
+b
+\
+]
+<
+br
+>
+<
+div
+>
+b
+<
+/
+div
+>
+<
+/
+div
+>
+]
+expected
+:
+FAIL
+[
+Backspace
+when
+<
+div
+>
+a
+[
+b
+\
+]
+<
+br
+>
+<
+div
+>
+b
+<
+/
+div
+>
+<
+/
+div
+>
+]
+expected
+:
+FAIL
+[
+document
+.
+execCommand
+(
+"
+delete
+"
+)
+when
+<
+div
+>
+a
+[
+\
+]
+\
+\
+n
+<
+div
+>
+b
+<
+/
+div
+>
+<
+/
+div
+>
+]
+expected
+:
+FAIL
+[
+Backspace
+when
+<
+div
+>
+a
+[
+\
+]
+\
+\
+n
+<
+div
+>
+b
+<
+/
+div
+>
+<
+/
+div
+>
+]
+expected
+:
+FAIL
+[
+document
+.
+execCommand
+(
+"
+delete
+"
+)
+when
+<
+div
+>
+a
+[
+\
+]
+\
+\
+n
+<
+div
+>
+b
+<
+/
+div
+>
+<
+/
+div
+>
+]
+expected
+:
+FAIL
+[
+Backspace
+when
+<
+div
+>
+a
+[
+\
+]
+\
+\
+n
+<
+div
+>
+b
+<
+/
+div
+>
+<
+/
+div
+>
+]
+expected
+:
+FAIL
+[
+document
+.
+execCommand
+(
+"
+delete
+"
+)
+when
+<
+div
+>
+a
+b
+[
+\
+]
+\
+\
+n
+<
+div
+>
+b
+<
+/
+div
+>
+<
+/
+div
+>
+]
+expected
+:
+FAIL
+[
+Backspace
+when
+<
+div
+>
+a
+b
+[
+\
+]
+\
+\
+n
+<
+div
+>
+b
+<
+/
+div
+>
+<
+/
+div
+>
+]
+expected
+:
+FAIL
+[
+document
+.
+execCommand
+(
+"
+delete
+"
+)
+when
+<
+div
+>
+a
+[
+b
+\
+]
+\
+\
+n
+<
+div
+>
+b
+<
+/
+div
+>
+<
+/
+div
+>
+]
+expected
+:
+FAIL
+[
+Backspace
+when
+<
+div
+>
+a
+[
+b
+\
+]
+\
+\
+n
+<
+div
+>
+b
+<
+/
+div
+>
+<
+/
+div
+>
+]
+expected
+:
+FAIL
+[
 delete
 -
 before
@@ -293,6 +1677,234 @@ space
 =
 normal
 ]
+[
+document
+.
+execCommand
+(
+"
+delete
+"
+)
+when
+<
+p
+>
+a
+[
+\
+]
+<
+br
+>
+<
+/
+p
+>
+]
+expected
+:
+FAIL
+[
+Backspace
+when
+<
+p
+>
+a
+[
+\
+]
+<
+br
+>
+<
+/
+p
+>
+]
+expected
+:
+FAIL
+[
+document
+.
+execCommand
+(
+"
+delete
+"
+)
+when
+<
+p
+>
+a
+[
+\
+]
+<
+br
+>
+<
+/
+p
+>
+]
+expected
+:
+FAIL
+[
+Backspace
+when
+<
+p
+>
+a
+[
+\
+]
+<
+br
+>
+<
+/
+p
+>
+]
+expected
+:
+FAIL
+[
+document
+.
+execCommand
+(
+"
+delete
+"
+)
+when
+<
+div
+>
+a
+[
+\
+]
+<
+br
+>
+<
+div
+>
+b
+<
+/
+div
+>
+<
+/
+div
+>
+]
+expected
+:
+FAIL
+[
+Backspace
+when
+<
+div
+>
+a
+[
+\
+]
+<
+br
+>
+<
+div
+>
+b
+<
+/
+div
+>
+<
+/
+div
+>
+]
+expected
+:
+FAIL
+[
+document
+.
+execCommand
+(
+"
+delete
+"
+)
+when
+<
+div
+>
+a
+[
+\
+]
+<
+br
+>
+<
+div
+>
+b
+<
+/
+div
+>
+<
+/
+div
+>
+]
+expected
+:
+FAIL
+[
+Backspace
+when
+<
+div
+>
+a
+[
+\
+]
+<
+br
+>
+<
+div
+>
+b
+<
+/
+div
+>
+<
+/
+div
+>
+]
+expected
+:
+FAIL
 [
 delete
 -
@@ -314,3 +1926,931 @@ pre
 -
 wrap
 ]
+[
+document
+.
+execCommand
+(
+"
+delete
+"
+)
+when
+<
+p
+>
+a
+[
+\
+]
+<
+br
+>
+<
+/
+p
+>
+]
+expected
+:
+FAIL
+[
+Backspace
+when
+<
+p
+>
+a
+[
+\
+]
+<
+br
+>
+<
+/
+p
+>
+]
+expected
+:
+FAIL
+[
+document
+.
+execCommand
+(
+"
+delete
+"
+)
+when
+<
+p
+>
+a
+[
+\
+]
+<
+br
+>
+<
+/
+p
+>
+]
+expected
+:
+FAIL
+[
+Backspace
+when
+<
+p
+>
+a
+[
+\
+]
+<
+br
+>
+<
+/
+p
+>
+]
+expected
+:
+FAIL
+[
+document
+.
+execCommand
+(
+"
+delete
+"
+)
+when
+<
+p
+>
+a
+b
+[
+\
+]
+<
+br
+>
+<
+/
+p
+>
+]
+expected
+:
+FAIL
+[
+Backspace
+when
+<
+p
+>
+a
+b
+[
+\
+]
+<
+br
+>
+<
+/
+p
+>
+]
+expected
+:
+FAIL
+[
+document
+.
+execCommand
+(
+"
+delete
+"
+)
+when
+<
+p
+>
+a
+[
+b
+\
+]
+<
+br
+>
+<
+/
+p
+>
+]
+expected
+:
+FAIL
+[
+Backspace
+when
+<
+p
+>
+a
+[
+b
+\
+]
+<
+br
+>
+<
+/
+p
+>
+]
+expected
+:
+FAIL
+[
+document
+.
+execCommand
+(
+"
+delete
+"
+)
+when
+<
+p
+>
+a
+[
+\
+]
+\
+\
+n
+<
+/
+p
+>
+]
+expected
+:
+FAIL
+[
+Backspace
+when
+<
+p
+>
+a
+[
+\
+]
+\
+\
+n
+<
+/
+p
+>
+]
+expected
+:
+FAIL
+[
+document
+.
+execCommand
+(
+"
+delete
+"
+)
+when
+<
+p
+>
+a
+[
+\
+]
+\
+\
+n
+<
+/
+p
+>
+]
+expected
+:
+FAIL
+[
+Backspace
+when
+<
+p
+>
+a
+[
+\
+]
+\
+\
+n
+<
+/
+p
+>
+]
+expected
+:
+FAIL
+[
+document
+.
+execCommand
+(
+"
+delete
+"
+)
+when
+<
+p
+>
+a
+b
+[
+\
+]
+\
+\
+n
+<
+/
+p
+>
+]
+expected
+:
+FAIL
+[
+Backspace
+when
+<
+p
+>
+a
+b
+[
+\
+]
+\
+\
+n
+<
+/
+p
+>
+]
+expected
+:
+FAIL
+[
+document
+.
+execCommand
+(
+"
+delete
+"
+)
+when
+<
+p
+>
+a
+[
+b
+\
+]
+\
+\
+n
+<
+/
+p
+>
+]
+expected
+:
+FAIL
+[
+Backspace
+when
+<
+p
+>
+a
+[
+b
+\
+]
+\
+\
+n
+<
+/
+p
+>
+]
+expected
+:
+FAIL
+[
+document
+.
+execCommand
+(
+"
+delete
+"
+)
+when
+<
+div
+>
+a
+[
+\
+]
+<
+br
+>
+<
+div
+>
+b
+<
+/
+div
+>
+<
+/
+div
+>
+]
+expected
+:
+FAIL
+[
+Backspace
+when
+<
+div
+>
+a
+[
+\
+]
+<
+br
+>
+<
+div
+>
+b
+<
+/
+div
+>
+<
+/
+div
+>
+]
+expected
+:
+FAIL
+[
+document
+.
+execCommand
+(
+"
+delete
+"
+)
+when
+<
+div
+>
+a
+[
+\
+]
+<
+br
+>
+<
+div
+>
+b
+<
+/
+div
+>
+<
+/
+div
+>
+]
+expected
+:
+FAIL
+[
+Backspace
+when
+<
+div
+>
+a
+[
+\
+]
+<
+br
+>
+<
+div
+>
+b
+<
+/
+div
+>
+<
+/
+div
+>
+]
+expected
+:
+FAIL
+[
+document
+.
+execCommand
+(
+"
+delete
+"
+)
+when
+<
+div
+>
+a
+b
+[
+\
+]
+<
+br
+>
+<
+div
+>
+b
+<
+/
+div
+>
+<
+/
+div
+>
+]
+expected
+:
+FAIL
+[
+Backspace
+when
+<
+div
+>
+a
+b
+[
+\
+]
+<
+br
+>
+<
+div
+>
+b
+<
+/
+div
+>
+<
+/
+div
+>
+]
+expected
+:
+FAIL
+[
+document
+.
+execCommand
+(
+"
+delete
+"
+)
+when
+<
+div
+>
+a
+[
+b
+\
+]
+<
+br
+>
+<
+div
+>
+b
+<
+/
+div
+>
+<
+/
+div
+>
+]
+expected
+:
+FAIL
+[
+Backspace
+when
+<
+div
+>
+a
+[
+b
+\
+]
+<
+br
+>
+<
+div
+>
+b
+<
+/
+div
+>
+<
+/
+div
+>
+]
+expected
+:
+FAIL
+[
+document
+.
+execCommand
+(
+"
+delete
+"
+)
+when
+<
+div
+>
+a
+[
+\
+]
+\
+\
+n
+<
+div
+>
+b
+<
+/
+div
+>
+<
+/
+div
+>
+]
+expected
+:
+FAIL
+[
+Backspace
+when
+<
+div
+>
+a
+[
+\
+]
+\
+\
+n
+<
+div
+>
+b
+<
+/
+div
+>
+<
+/
+div
+>
+]
+expected
+:
+FAIL
+[
+document
+.
+execCommand
+(
+"
+delete
+"
+)
+when
+<
+div
+>
+a
+[
+\
+]
+\
+\
+n
+<
+div
+>
+b
+<
+/
+div
+>
+<
+/
+div
+>
+]
+expected
+:
+FAIL
+[
+Backspace
+when
+<
+div
+>
+a
+[
+\
+]
+\
+\
+n
+<
+div
+>
+b
+<
+/
+div
+>
+<
+/
+div
+>
+]
+expected
+:
+FAIL
+[
+document
+.
+execCommand
+(
+"
+delete
+"
+)
+when
+<
+div
+>
+a
+b
+[
+\
+]
+\
+\
+n
+<
+div
+>
+b
+<
+/
+div
+>
+<
+/
+div
+>
+]
+expected
+:
+FAIL
+[
+Backspace
+when
+<
+div
+>
+a
+b
+[
+\
+]
+\
+\
+n
+<
+div
+>
+b
+<
+/
+div
+>
+<
+/
+div
+>
+]
+expected
+:
+FAIL
+[
+document
+.
+execCommand
+(
+"
+delete
+"
+)
+when
+<
+div
+>
+a
+[
+b
+\
+]
+\
+\
+n
+<
+div
+>
+b
+<
+/
+div
+>
+<
+/
+div
+>
+]
+expected
+:
+FAIL
+[
+Backspace
+when
+<
+div
+>
+a
+[
+b
+\
+]
+\
+\
+n
+<
+div
+>
+b
+<
+/
+div
+>
+<
+/
+div
+>
+]
+expected
+:
+FAIL
