Bug 1923251 - Backout almost all of D225038 except WPT part
The backed-out patch is Bug 1923251 (part 1).

This does not backout the changes in `EditorDOMPoint.h`, `WSRunObject.h` and
template method instantiation in `WSRunObject.cpp` to make some other my local
changes keep working.  (They won't affect to any behavior.)

Depends on D226631

Differential Revision: https://phabricator.services.mozilla.com/D226632

UltraBlame original commit: c94760684a9baccf821fb4416ec1d0120f7e3743

--- a/testing/web-platform/meta/editing/run/inserthtml.html.ini
+++ b/testing/web-platform/meta/editing/run/inserthtml.html.ini
@@ -1823,3 +1823,146 @@ innerHTML
 expected
 :
 FAIL
+[
+[
+[
+"
+inserthtml
+"
+"
+<
+!
+-
+-
+abc
+-
+-
+>
+"
+\
+]
+\
+]
+"
+<
+p
+>
+{
+}
+<
+br
+>
+<
+/
+p
+>
+"
+compare
+innerHTML
+]
+expected
+:
+FAIL
+[
+[
+[
+"
+inserthtml
+"
+"
+<
+!
+-
+-
+abc
+-
+-
+>
+"
+\
+]
+\
+]
+"
+<
+p
+>
+<
+br
+>
+{
+}
+<
+/
+p
+>
+"
+compare
+innerHTML
+]
+expected
+:
+FAIL
+[
+[
+[
+"
+inserthtml
+"
+"
+<
+!
+-
+-
+abc
+-
+-
+>
+"
+\
+]
+\
+]
+"
+<
+p
+>
+<
+!
+-
+-
+foo
+-
+-
+>
+<
+span
+>
+<
+br
+>
+<
+/
+span
+>
+{
+}
+<
+!
+-
+-
+bar
+-
+-
+>
+<
+/
+p
+>
+"
+compare
+innerHTML
+]
+expected
+:
+FAIL
