--- a/testing/web-platform/meta/editing/run/insertimage.html.ini
+++ b/testing/web-platform/meta/editing/run/insertimage.html.ini
@@ -579,3 +579,41 @@ innerHTML
 expected
 :
 FAIL
+[
+[
+[
+"
+insertimage
+"
+"
+/
+img
+/
+lion
+.
+svg
+"
+\
+]
+\
+]
+"
+<
+div
+>
+{
+}
+<
+br
+>
+<
+/
+div
+>
+"
+compare
+innerHTML
+]
+expected
+:
+FAIL
