--- a/testing/web-platform/meta/editing/plaintext-only/insertText.html.ini
+++ b/testing/web-platform/meta/editing/plaintext-only/insertText.html.ini
@@ -412,6 +412,510 @@ expected
 :
 FAIL
 [
+execCommand
+(
+"
+insertText
+"
+false
+"
+"
+)
+when
+{
+}
+<
+br
+>
+]
+expected
+:
+FAIL
+[
+Typing
+"
+"
+when
+{
+}
+<
+br
+>
+]
+expected
+:
+FAIL
+[
+execCommand
+(
+"
+insertText
+"
+false
+"
+a
+"
+)
+when
+{
+}
+<
+br
+>
+]
+expected
+:
+FAIL
+[
+Typing
+"
+a
+"
+when
+{
+}
+<
+br
+>
+]
+expected
+:
+FAIL
+[
+execCommand
+(
+"
+insertText
+"
+false
+"
+a
+"
+)
+when
+[
+\
+]
+\
+\
+n
+]
+expected
+:
+FAIL
+[
+Typing
+"
+a
+"
+when
+[
+\
+]
+\
+\
+n
+]
+expected
+:
+FAIL
+[
+execCommand
+(
+"
+insertText
+"
+false
+"
+a
+"
+)
+when
+<
+p
+>
+<
+b
+>
+AB
+[
+\
+]
+<
+/
+b
+>
+<
+/
+p
+>
+and
+execCommand
+(
+"
+insertParagraph
+"
+)
+]
+expected
+:
+FAIL
+[
+Typing
+"
+a
+"
+when
+<
+p
+>
+<
+b
+>
+AB
+[
+\
+]
+<
+/
+b
+>
+<
+/
+p
+>
+and
+execCommand
+(
+"
+insertParagraph
+"
+)
+]
+expected
+:
+FAIL
+[
+execCommand
+(
+"
+insertText
+"
+false
+"
+a
+"
+)
+when
+<
+p
+>
+<
+b
+>
+AB
+[
+\
+]
+<
+/
+b
+>
+<
+/
+p
+>
+and
+execCommand
+(
+"
+insertLineBreak
+"
+)
+]
+expected
+:
+FAIL
+[
+Typing
+"
+a
+"
+when
+<
+p
+>
+<
+b
+>
+AB
+[
+\
+]
+<
+/
+b
+>
+<
+/
+p
+>
+and
+execCommand
+(
+"
+insertLineBreak
+"
+)
+]
+expected
+:
+FAIL
+[
+execCommand
+(
+"
+insertText
+"
+false
+"
+a
+"
+)
+when
+<
+p
+>
+<
+b
+>
+[
+AB
+\
+]
+<
+/
+b
+>
+<
+/
+p
+>
+and
+execCommand
+(
+"
+insertLineBreak
+"
+)
+]
+expected
+:
+FAIL
+[
+Typing
+"
+a
+"
+when
+<
+p
+>
+<
+b
+>
+[
+AB
+\
+]
+<
+/
+b
+>
+<
+/
+p
+>
+and
+execCommand
+(
+"
+insertLineBreak
+"
+)
+]
+expected
+:
+FAIL
+[
+execCommand
+(
+"
+insertText
+"
+false
+"
+a
+"
+)
+when
+<
+p
+>
+<
+b
+>
+[
+AB
+\
+]
+<
+/
+b
+>
+<
+/
+p
+>
+and
+execCommand
+(
+"
+delete
+"
+)
+]
+expected
+:
+FAIL
+[
+Typing
+"
+a
+"
+when
+<
+p
+>
+<
+b
+>
+[
+AB
+\
+]
+<
+/
+b
+>
+<
+/
+p
+>
+and
+execCommand
+(
+"
+delete
+"
+)
+]
+expected
+:
+FAIL
+[
+execCommand
+(
+"
+insertText
+"
+false
+"
+a
+"
+)
+when
+<
+p
+>
+<
+b
+>
+A
+[
+\
+]
+<
+/
+b
+>
+<
+/
+b
+>
+and
+execCommand
+(
+"
+insertParagraph
+"
+)
+and
+move
+caret
+to
+the
+preceding
+paragraph
+temporarily
+]
+expected
+:
+FAIL
+[
+Typing
+"
+a
+"
+when
+<
+p
+>
+<
+b
+>
+A
+[
+\
+]
+<
+/
+b
+>
+<
+/
+b
+>
+and
+execCommand
+(
+"
+insertParagraph
+"
+)
+and
+move
+caret
+to
+the
+preceding
+paragraph
+temporarily
+]
+expected
+:
+FAIL
+[
 insertText
 .
 html
@@ -825,6 +1329,510 @@ expected
 :
 FAIL
 [
+execCommand
+(
+"
+insertText
+"
+false
+"
+"
+)
+when
+{
+}
+<
+br
+>
+]
+expected
+:
+FAIL
+[
+Typing
+"
+"
+when
+{
+}
+<
+br
+>
+]
+expected
+:
+FAIL
+[
+execCommand
+(
+"
+insertText
+"
+false
+"
+a
+"
+)
+when
+{
+}
+<
+br
+>
+]
+expected
+:
+FAIL
+[
+Typing
+"
+a
+"
+when
+{
+}
+<
+br
+>
+]
+expected
+:
+FAIL
+[
+execCommand
+(
+"
+insertText
+"
+false
+"
+a
+"
+)
+when
+[
+\
+]
+\
+\
+n
+]
+expected
+:
+FAIL
+[
+Typing
+"
+a
+"
+when
+[
+\
+]
+\
+\
+n
+]
+expected
+:
+FAIL
+[
+execCommand
+(
+"
+insertText
+"
+false
+"
+a
+"
+)
+when
+<
+p
+>
+<
+b
+>
+AB
+[
+\
+]
+<
+/
+b
+>
+<
+/
+p
+>
+and
+execCommand
+(
+"
+insertParagraph
+"
+)
+]
+expected
+:
+FAIL
+[
+Typing
+"
+a
+"
+when
+<
+p
+>
+<
+b
+>
+AB
+[
+\
+]
+<
+/
+b
+>
+<
+/
+p
+>
+and
+execCommand
+(
+"
+insertParagraph
+"
+)
+]
+expected
+:
+FAIL
+[
+execCommand
+(
+"
+insertText
+"
+false
+"
+a
+"
+)
+when
+<
+p
+>
+<
+b
+>
+AB
+[
+\
+]
+<
+/
+b
+>
+<
+/
+p
+>
+and
+execCommand
+(
+"
+insertLineBreak
+"
+)
+]
+expected
+:
+FAIL
+[
+Typing
+"
+a
+"
+when
+<
+p
+>
+<
+b
+>
+AB
+[
+\
+]
+<
+/
+b
+>
+<
+/
+p
+>
+and
+execCommand
+(
+"
+insertLineBreak
+"
+)
+]
+expected
+:
+FAIL
+[
+execCommand
+(
+"
+insertText
+"
+false
+"
+a
+"
+)
+when
+<
+p
+>
+<
+b
+>
+[
+AB
+\
+]
+<
+/
+b
+>
+<
+/
+p
+>
+and
+execCommand
+(
+"
+insertLineBreak
+"
+)
+]
+expected
+:
+FAIL
+[
+Typing
+"
+a
+"
+when
+<
+p
+>
+<
+b
+>
+[
+AB
+\
+]
+<
+/
+b
+>
+<
+/
+p
+>
+and
+execCommand
+(
+"
+insertLineBreak
+"
+)
+]
+expected
+:
+FAIL
+[
+execCommand
+(
+"
+insertText
+"
+false
+"
+a
+"
+)
+when
+<
+p
+>
+<
+b
+>
+[
+AB
+\
+]
+<
+/
+b
+>
+<
+/
+p
+>
+and
+execCommand
+(
+"
+delete
+"
+)
+]
+expected
+:
+FAIL
+[
+Typing
+"
+a
+"
+when
+<
+p
+>
+<
+b
+>
+[
+AB
+\
+]
+<
+/
+b
+>
+<
+/
+p
+>
+and
+execCommand
+(
+"
+delete
+"
+)
+]
+expected
+:
+FAIL
+[
+execCommand
+(
+"
+insertText
+"
+false
+"
+a
+"
+)
+when
+<
+p
+>
+<
+b
+>
+A
+[
+\
+]
+<
+/
+b
+>
+<
+/
+b
+>
+and
+execCommand
+(
+"
+insertParagraph
+"
+)
+and
+move
+caret
+to
+the
+preceding
+paragraph
+temporarily
+]
+expected
+:
+FAIL
+[
+Typing
+"
+a
+"
+when
+<
+p
+>
+<
+b
+>
+A
+[
+\
+]
+<
+/
+b
+>
+<
+/
+b
+>
+and
+execCommand
+(
+"
+insertParagraph
+"
+)
+and
+move
+caret
+to
+the
+preceding
+paragraph
+temporarily
+]
+expected
+:
+FAIL
+[
 insertText
 .
 html
@@ -1236,6 +2244,510 @@ expected
 :
 FAIL
 [
+execCommand
+(
+"
+insertText
+"
+false
+"
+"
+)
+when
+{
+}
+<
+br
+>
+]
+expected
+:
+FAIL
+[
+Typing
+"
+"
+when
+{
+}
+<
+br
+>
+]
+expected
+:
+FAIL
+[
+execCommand
+(
+"
+insertText
+"
+false
+"
+a
+"
+)
+when
+{
+}
+<
+br
+>
+]
+expected
+:
+FAIL
+[
+Typing
+"
+a
+"
+when
+{
+}
+<
+br
+>
+]
+expected
+:
+FAIL
+[
+execCommand
+(
+"
+insertText
+"
+false
+"
+a
+"
+)
+when
+[
+\
+]
+\
+\
+n
+]
+expected
+:
+FAIL
+[
+Typing
+"
+a
+"
+when
+[
+\
+]
+\
+\
+n
+]
+expected
+:
+FAIL
+[
+execCommand
+(
+"
+insertText
+"
+false
+"
+a
+"
+)
+when
+<
+p
+>
+<
+b
+>
+AB
+[
+\
+]
+<
+/
+b
+>
+<
+/
+p
+>
+and
+execCommand
+(
+"
+insertParagraph
+"
+)
+]
+expected
+:
+FAIL
+[
+Typing
+"
+a
+"
+when
+<
+p
+>
+<
+b
+>
+AB
+[
+\
+]
+<
+/
+b
+>
+<
+/
+p
+>
+and
+execCommand
+(
+"
+insertParagraph
+"
+)
+]
+expected
+:
+FAIL
+[
+execCommand
+(
+"
+insertText
+"
+false
+"
+a
+"
+)
+when
+<
+p
+>
+<
+b
+>
+AB
+[
+\
+]
+<
+/
+b
+>
+<
+/
+p
+>
+and
+execCommand
+(
+"
+insertLineBreak
+"
+)
+]
+expected
+:
+FAIL
+[
+Typing
+"
+a
+"
+when
+<
+p
+>
+<
+b
+>
+AB
+[
+\
+]
+<
+/
+b
+>
+<
+/
+p
+>
+and
+execCommand
+(
+"
+insertLineBreak
+"
+)
+]
+expected
+:
+FAIL
+[
+execCommand
+(
+"
+insertText
+"
+false
+"
+a
+"
+)
+when
+<
+p
+>
+<
+b
+>
+[
+AB
+\
+]
+<
+/
+b
+>
+<
+/
+p
+>
+and
+execCommand
+(
+"
+insertLineBreak
+"
+)
+]
+expected
+:
+FAIL
+[
+Typing
+"
+a
+"
+when
+<
+p
+>
+<
+b
+>
+[
+AB
+\
+]
+<
+/
+b
+>
+<
+/
+p
+>
+and
+execCommand
+(
+"
+insertLineBreak
+"
+)
+]
+expected
+:
+FAIL
+[
+execCommand
+(
+"
+insertText
+"
+false
+"
+a
+"
+)
+when
+<
+p
+>
+<
+b
+>
+[
+AB
+\
+]
+<
+/
+b
+>
+<
+/
+p
+>
+and
+execCommand
+(
+"
+delete
+"
+)
+]
+expected
+:
+FAIL
+[
+Typing
+"
+a
+"
+when
+<
+p
+>
+<
+b
+>
+[
+AB
+\
+]
+<
+/
+b
+>
+<
+/
+p
+>
+and
+execCommand
+(
+"
+delete
+"
+)
+]
+expected
+:
+FAIL
+[
+execCommand
+(
+"
+insertText
+"
+false
+"
+a
+"
+)
+when
+<
+p
+>
+<
+b
+>
+A
+[
+\
+]
+<
+/
+b
+>
+<
+/
+b
+>
+and
+execCommand
+(
+"
+insertParagraph
+"
+)
+and
+move
+caret
+to
+the
+preceding
+paragraph
+temporarily
+]
+expected
+:
+FAIL
+[
+Typing
+"
+a
+"
+when
+<
+p
+>
+<
+b
+>
+A
+[
+\
+]
+<
+/
+b
+>
+<
+/
+b
+>
+and
+execCommand
+(
+"
+insertParagraph
+"
+)
+and
+move
+caret
+to
+the
+preceding
+paragraph
+temporarily
+]
+expected
+:
+FAIL
+[
 insertText
 .
 html
@@ -1640,6 +3152,472 @@ caret
 to
 the
 following
+paragraph
+temporarily
+]
+expected
+:
+FAIL
+[
+execCommand
+(
+"
+insertText
+"
+false
+"
+"
+)
+when
+{
+}
+<
+br
+>
+]
+expected
+:
+FAIL
+[
+Typing
+"
+"
+when
+{
+}
+<
+br
+>
+]
+expected
+:
+FAIL
+[
+execCommand
+(
+"
+insertText
+"
+false
+"
+a
+"
+)
+when
+{
+}
+<
+br
+>
+]
+expected
+:
+FAIL
+[
+Typing
+"
+a
+"
+when
+{
+}
+<
+br
+>
+]
+expected
+:
+FAIL
+[
+execCommand
+(
+"
+insertText
+"
+false
+"
+a
+"
+)
+when
+<
+p
+>
+<
+b
+>
+AB
+[
+\
+]
+<
+/
+b
+>
+<
+/
+p
+>
+and
+execCommand
+(
+"
+insertParagraph
+"
+)
+]
+expected
+:
+FAIL
+[
+Typing
+"
+a
+"
+when
+<
+p
+>
+<
+b
+>
+AB
+[
+\
+]
+<
+/
+b
+>
+<
+/
+p
+>
+and
+execCommand
+(
+"
+insertParagraph
+"
+)
+]
+expected
+:
+FAIL
+[
+execCommand
+(
+"
+insertText
+"
+false
+"
+a
+"
+)
+when
+<
+p
+>
+<
+b
+>
+AB
+[
+\
+]
+<
+/
+b
+>
+<
+/
+p
+>
+and
+execCommand
+(
+"
+insertLineBreak
+"
+)
+]
+expected
+:
+FAIL
+[
+Typing
+"
+a
+"
+when
+<
+p
+>
+<
+b
+>
+AB
+[
+\
+]
+<
+/
+b
+>
+<
+/
+p
+>
+and
+execCommand
+(
+"
+insertLineBreak
+"
+)
+]
+expected
+:
+FAIL
+[
+execCommand
+(
+"
+insertText
+"
+false
+"
+a
+"
+)
+when
+<
+p
+>
+<
+b
+>
+[
+AB
+\
+]
+<
+/
+b
+>
+<
+/
+p
+>
+and
+execCommand
+(
+"
+insertLineBreak
+"
+)
+]
+expected
+:
+FAIL
+[
+Typing
+"
+a
+"
+when
+<
+p
+>
+<
+b
+>
+[
+AB
+\
+]
+<
+/
+b
+>
+<
+/
+p
+>
+and
+execCommand
+(
+"
+insertLineBreak
+"
+)
+]
+expected
+:
+FAIL
+[
+execCommand
+(
+"
+insertText
+"
+false
+"
+a
+"
+)
+when
+<
+p
+>
+<
+b
+>
+[
+AB
+\
+]
+<
+/
+b
+>
+<
+/
+p
+>
+and
+execCommand
+(
+"
+delete
+"
+)
+]
+expected
+:
+FAIL
+[
+Typing
+"
+a
+"
+when
+<
+p
+>
+<
+b
+>
+[
+AB
+\
+]
+<
+/
+b
+>
+<
+/
+p
+>
+and
+execCommand
+(
+"
+delete
+"
+)
+]
+expected
+:
+FAIL
+[
+execCommand
+(
+"
+insertText
+"
+false
+"
+a
+"
+)
+when
+<
+p
+>
+<
+b
+>
+A
+[
+\
+]
+<
+/
+b
+>
+<
+/
+b
+>
+and
+execCommand
+(
+"
+insertParagraph
+"
+)
+and
+move
+caret
+to
+the
+preceding
+paragraph
+temporarily
+]
+expected
+:
+FAIL
+[
+Typing
+"
+a
+"
+when
+<
+p
+>
+<
+b
+>
+A
+[
+\
+]
+<
+/
+b
+>
+<
+/
+b
+>
+and
+execCommand
+(
+"
+insertParagraph
+"
+)
+and
+move
+caret
+to
+the
+preceding
 paragraph
 temporarily
 ]
