--- a/testing/web-platform/mozilla/meta/editor/delete-space-after-double-click-selection.html.ini
+++ b/testing/web-platform/mozilla/meta/editor/delete-space-after-double-click-selection.html.ini
@@ -62,3 +62,25 @@ string
 expected
 :
 FAIL
+[
+DIV
+:
+Removing
+a
+word
+in
+front
+of
+a
+line
+break
+should
+preserve
+the
+line
+break
+.
+]
+expected
+:
+FAIL
