Bug 1924310 - Update wpt manifest  credentialless-dedicated-worker.https.tentative.window.js.ini r=aryx DONTBUILD
Differential Revision: https://phabricator.services.mozilla.com/D225612

UltraBlame original commit: c11eaea50455da5c3ae253ab7de43b95f9a9d80c

--- a/testing/web-platform/meta/html/document-isolation-policy/credentialless-dedicated-worker.https.tentative.window.js.ini
+++ b/testing/web-platform/meta/html/document-isolation-policy/credentialless-dedicated-worker.https.tentative.window.js.ini
@@ -24,6 +24,19 @@ worker
 ]
 expected
 :
+if
+release_or_beta
+and
+(
+os
+=
+=
+"
+android
+"
+)
+:
+PASS
 FAIL
 [
 fetch
@@ -36,6 +49,19 @@ worker
 ]
 expected
 :
+if
+release_or_beta
+and
+(
+os
+=
+=
+"
+android
+"
+)
+:
+PASS
 FAIL
 [
 fetch
@@ -59,5 +85,60 @@ require_corp
 worker
 ]
 expected
+:
+if
+release_or_beta
+and
+(
+os
+=
+=
+"
+android
+"
+)
+:
+PASS
+FAIL
+[
+fetch
+same
+-
+origin
+]
+expected
+:
+if
+release_or_beta
+and
+(
+os
+=
+=
+"
+android
+"
+)
+:
+FAIL
+[
+fetch
+cross
+-
+origin
+]
+expected
+:
+if
+release_or_beta
+and
+(
+os
+=
+=
+"
+android
+"
+)
 :
 FAIL
