Bug 1926269 - Changes to allow publishing selectors. r=supply-chain-reviewers
to_shmem and to_shmem_derive need a description, and selectors needs a
version bump.

Tweak supply-chain audits / config to deal with now published crates.

Differential Revision: https://phabricator.services.mozilla.com/D226468

UltraBlame original commit: 8c3b32bb01dd961ba99a3bbc78de23fc13fbd30a

--- a/supply-chain/audits.toml
+++ b/supply-chain/audits.toml
@@ -39268,6 +39268,60 @@ code
 [
 audits
 .
+selectors
+]
+]
+who
+=
+"
+Emilio
+Cobos
+lvarez
+<
+emilio
+crisal
+.
+io
+>
+"
+criteria
+=
+"
+safe
+-
+to
+-
+deploy
+"
+delta
+=
+"
+0
+.
+25
+.
+0
+-
+>
+0
+.
+26
+.
+0
+"
+notes
+=
+"
+First
+-
+party
+code
+.
+"
+[
+[
+audits
+.
 semver
 ]
 ]
@@ -40678,6 +40732,60 @@ First
 -
 party
 Mozilla
+code
+.
+"
+[
+[
+audits
+.
+servo_arc
+]
+]
+who
+=
+"
+Emilio
+Cobos
+lvarez
+<
+emilio
+crisal
+.
+io
+>
+"
+criteria
+=
+"
+safe
+-
+to
+-
+deploy
+"
+delta
+=
+"
+0
+.
+3
+.
+0
+-
+>
+0
+.
+4
+.
+0
+"
+notes
+=
+"
+First
+-
+party
 code
 .
 "
@@ -43850,6 +43958,111 @@ delta
 7
 .
 6
+"
+[
+[
+audits
+.
+to_shmem
+]
+]
+who
+=
+"
+Emilio
+Cobos
+lvarez
+<
+emilio
+crisal
+.
+io
+>
+"
+criteria
+=
+"
+safe
+-
+to
+-
+deploy
+"
+version
+=
+"
+0
+.
+1
+.
+0
+"
+notes
+=
+"
+First
+-
+party
+mozilla
+code
+.
+"
+[
+[
+audits
+.
+to_shmem_derive
+]
+]
+who
+=
+"
+Emilio
+Cobos
+lvarez
+<
+emilio
+crisal
+.
+io
+>
+"
+criteria
+=
+"
+safe
+-
+to
+-
+deploy
+"
+version
+=
+"
+0
+.
+1
+.
+0
+"
+notes
+=
+"
+It
+'
+s
+all
+first
+-
+party
+Mozilla
+code
+recently
+published
+to
+crates
+.
+io
 "
 [
 [
