--- a/supply-chain/config.toml
+++ b/supply-chain/config.toml
@@ -2011,6 +2011,72 @@ name
 [
 policy
 .
+to_shmem
+]
+audit
+-
+as
+-
+crates
+-
+io
+=
+true
+notes
+=
+"
+This
+is
+a
+first
+-
+party
+crate
+which
+is
+also
+published
+to
+crates
+.
+io
+"
+[
+policy
+.
+to_shmem_derive
+]
+audit
+-
+as
+-
+crates
+-
+io
+=
+true
+notes
+=
+"
+This
+is
+a
+first
+-
+party
+crate
+which
+is
+also
+published
+to
+crates
+.
+io
+"
+[
+policy
+.
 unicode
 -
 bidi
