--- a/browser/components/urlbar/tests/browser/browser.toml
+++ b/browser/components/urlbar/tests/browser/browser.toml
@@ -1431,6 +1431,36 @@ or
 labeled
 [
 "
+browser_MLSuggest_integration
+.
+js
+"
+]
+support
+-
+files
+=
+[
+"
+!
+/
+toolkit
+/
+components
+/
+ml
+/
+tests
+/
+browser
+/
+head
+.
+js
+"
+]
+[
+"
 browser_move_tab_to_new_window
 .
 js
