Bug 1879401 - Make clipboard DataTransfer use sync version of `nsIAsyncGetClipboardData` r=edgar,ipc-reviewers,nika
Differential Revision: https://phabricator.services.mozilla.com/D224843

UltraBlame original commit: 989b843531f89932f898d1fc81e0ac0d49a7228e

--- a/ipc/ipdl/sync-messages.ini
+++ b/ipc/ipdl/sync-messages.ini
@@ -692,10 +692,32 @@ GetClipboard
 ]
 description
 =
-Legacy
+Called
+from
+PContent
+:
+:
+GetClipboard
+which
+is
+a
+legacy
 synchronous
 clipboard
 API
+[
+PClipboardReadRequest
+:
+:
+GetDataSync
+]
+description
+=
+Called
+from
+synchronous
+DataTransfer
+constructor
 [
 PContent
 :
