Bug 1915351 part 3 - add entry point to get all clipboard to actor r=dlp-reviewers,ipc-reviewers,nika,edgar,handyman
Add an entry point to ClipboardContentAnalysisParent to get all the
data on the clipboard, which also analyzes all the clipboard contents.

Differential Revision: https://phabricator.services.mozilla.com/D223412

UltraBlame original commit: a20adf8d4516556f58dabde59f44aafce5cbbba6

--- a/ipc/ipdl/sync-messages.ini
+++ b/ipc/ipdl/sync-messages.ini
@@ -706,6 +706,19 @@ synchronous
 clipboard
 API
 [
+PClipboardContentAnalysis
+:
+:
+GetAllClipboardDataSync
+]
+description
+=
+Called
+from
+synchronous
+DataTransfer
+constructor
+[
 PClipboardReadRequest
 :
 :
