Bug 1113522 - Expose ServiceWorker in Workers. r=dom-worker-reviewers,webidl,edenchuang,emilio
We are able to remove ServiceWorkerVisible and instead use
ServiceWorkersEnabled in its place since we are no longer limiting
where ServiceWorker instances are exposed.

The correctness of ExtendableMessageEvent.source is addressed later in
the stack.

Although we enable skip-waiting-installed.https.html here, we also have
to make it expected it will sometimes fail due to an inherent IPC race;
bug 1926641 describes the situation.

Differential Revision: https://phabricator.services.mozilla.com/D180914

UltraBlame original commit: 098149d7f4479220ecd9bbbf97f988f5dd10c23c

--- a/testing/web-platform/meta/service-workers/service-worker/skip-waiting-installed.https.html.ini
+++ b/testing/web-platform/meta/service-workers/service-worker/skip-waiting-installed.https.html.ini
@@ -49,6 +49,24 @@ fission
 OK
 TIMEOUT
 ]
+#
+Bug
+1926641
+tracks
+removing
+the
+allowed
+failure
+once
+we
+no
+longer
+have
+an
+#
+IPC
+race
+.
 [
 Test
 skipWaiting
@@ -61,4 +79,7 @@ waiting
 ]
 expected
 :
+[
+PASS
 FAIL
+]
