Bug 1544232 - Limit lifetime extension of SWs by SWs to the sender's lifetime. r=edenchuang
This patch introduces an explicit concept of lifetimes with mechanisms
in place so that actions taken by Clients (windows or non-ServiceWorker
orkers) will extend the lifetime of a ServiceWorker, but a ServiceWorker
cannot extend the life of another ServiceWorker.

The areas of concern are:
- ServiceWorker.postMessage: With ServiceWorkers exposed on workers and
  the ability to access other registrations via ServiceWorkerContainer
  being exposed, ServiceWorkers can message other ServiceWorkers.  It's
  essential that they never be allowed to give a ServiceWorker a
  lifetime longer than their own.
- ServiceWorkerRegistration.update(): Requesting an update of a
  registration should not allow any installed/updated ServiceWorker to
  have a lifetime longer than the ServiceWorker creating the request.
- ServiceWorkerContainer.register(): Requesting the installation of a
  new ServiceWorker should likewise constrain the lifetime of the newly
  installed ServiceWorker.

Note that in cases where we would potentially spawn a ServiceWorker,
whether it be in response to postMessage or as part of an install or
update, a key criteria is whether the lifetime extends far enough into
the future for us to believe the ServiceWorker can accomplish anything.
Currently we have a constant of 5 seconds against a normal full
lifetime of 30 seconds (before 30 second grace period).  So once a SW
has < 5 seconds of lifetime left, it won't be able to spawn a SW.  Note
that in the case of install/update, we do not prevent the creation of
the job at this time, instead the job will fail during the check script
evaluation step as failure to spawn the ServiceWorker is equivalent to
a script load failure.

A somewhat ugly part of this implementation is that because Bug 1853706
is not yet implemented, our actors that are fundamentally associated
with a global don't have an inherent understanding of their re

--- a/dom/serviceworkers/test/browser-common.toml
+++ b/dom/serviceworkers/test/browser-common.toml
@@ -135,6 +135,16 @@ storage_recovery_worker
 sjs
 "
 "
+sw_always_updating_inter_sw_postmessage
+.
+sjs
+"
+"
+sw_inter_sw_postmessage
+.
+js
+"
+"
 sw_respondwith_serviceworker
 .
 js
@@ -311,6 +321,14 @@ Bug
 [
 "
 browser_storage_recovery
+.
+js
+"
+]
+#
+[
+"
+browser_sw_lifetime_extension
 .
 js
 "
