Bug 1926347 [wpt PR 48753] - Update wpt metadata, a=testonly
wpt-pr: 48753
wpt-type: metadata

UltraBlame original commit: 94fd50d9dd9341c1a443b62e9558c49d5dc4c1ea

--- a/testing/web-platform/meta/partitioned-popins/partitioned-popins.cookies-blocked.tentative.sub.https.window.js.ini
+++ b/testing/web-platform/meta/partitioned-popins/partitioned-popins.cookies-blocked.tentative.sub.https.window.js.ini
@@ -4,6 +4,8 @@ partitioned
 popins
 .
 cookies
+-
+blocked
 .
 tentative
 .
@@ -19,14 +21,15 @@ html
 Verify
 Partitioned
 Popins
-only
-have
+cookie
 access
-to
+when
 third
 -
 party
-cookies
+cookie
+access
+blocked
 ]
 expected
 :
