Bug 1926537 - [wpt-sync] Update web-platform-tests to 9220b4d4810e89642f7b21609cee40de875ebce8, a=testonly
MANUAL PUSH: wpt sync bot

wpt-head: 9220b4d4810e89642f7b21609cee40de875ebce8
wpt-type: landing

UltraBlame original commit: 226cb8cfe55494d2416130ad26fa2ac8409ce5a4

--- a/testing/web-platform/meta/console/console-log-large-array.any.js.ini
+++ b/testing/web-platform/meta/console/console-log-large-array.any.js.ini
@@ -16,18 +16,33 @@ html
 expected
 :
 if
-(
-os
-=
-=
-"
-android
-"
-)
+asan
 and
-debug
+not
+fission
 :
+[
+OK
 TIMEOUT
+]
+[
+Logging
+large
+arrays
+works
+]
+expected
+:
+if
+asan
+and
+not
+fission
+:
+[
+PASS
+TIMEOUT
+]
 [
 console
 -
@@ -41,21 +56,6 @@ any
 .
 html
 ]
-expected
-:
-if
-(
-os
-=
-=
-"
-android
-"
-)
-and
-debug
-:
-TIMEOUT
 [
 console
 -
