--- a/testing/web-platform/meta/cookies/attributes/domain.sub.html.ini
+++ b/testing/web-platform/meta/cookies/attributes/domain.sub.html.ini
@@ -17,14 +17,14 @@ linux
 "
 )
 and
-not
 debug
 and
-asan
+not
+fission
 :
 [
-TIMEOUT
 OK
+TIMEOUT
 ]
 if
 (
@@ -38,9 +38,6 @@ linux
 and
 not
 debug
-and
-not
-asan
 :
 [
 OK
@@ -243,9 +240,6 @@ and
 not
 debug
 and
-not
-asan
-and
 tsan
 :
 [
@@ -267,32 +261,9 @@ not
 debug
 and
 not
-asan
-and
-not
 tsan
 :
 [
-PASS
-NOTRUN
-]
-if
-(
-os
-=
-=
-"
-linux
-"
-)
-and
-not
-debug
-and
-asan
-:
-[
-TIMEOUT
 PASS
 NOTRUN
 ]
@@ -337,29 +308,6 @@ linux
 and
 not
 debug
-and
-asan
-:
-[
-NOTRUN
-PASS
-TIMEOUT
-]
-if
-(
-os
-=
-=
-"
-linux
-"
-)
-and
-not
-debug
-and
-not
-asan
 :
 [
 PASS
@@ -407,29 +355,6 @@ linux
 and
 not
 debug
-and
-asan
-:
-[
-NOTRUN
-PASS
-TIMEOUT
-]
-if
-(
-os
-=
-=
-"
-linux
-"
-)
-and
-not
-debug
-and
-not
-asan
 :
 [
 PASS
@@ -463,15 +388,15 @@ linux
 "
 )
 and
-not
 debug
 and
-asan
+not
+fission
 :
 [
-NOTRUN
 PASS
 TIMEOUT
+NOTRUN
 ]
 if
 (
@@ -485,9 +410,6 @@ linux
 and
 not
 debug
-and
-not
-asan
 :
 [
 PASS
@@ -521,15 +443,14 @@ linux
 "
 )
 and
-not
 debug
 and
-asan
+not
+fission
 :
 [
-NOTRUN
 PASS
-TIMEOUT
+NOTRUN
 ]
 if
 (
@@ -543,9 +464,6 @@ linux
 and
 not
 debug
-and
-not
-asan
 :
 [
 PASS
@@ -579,15 +497,14 @@ linux
 "
 )
 and
-not
 debug
 and
-asan
+not
+fission
 :
 [
-NOTRUN
 PASS
-TIMEOUT
+NOTRUN
 ]
 if
 (
@@ -601,9 +518,6 @@ linux
 and
 not
 debug
-and
-not
-asan
 :
 [
 PASS
@@ -643,29 +557,6 @@ linux
 and
 not
 debug
-and
-asan
-:
-[
-NOTRUN
-PASS
-TIMEOUT
-]
-if
-(
-os
-=
-=
-"
-linux
-"
-)
-and
-not
-debug
-and
-not
-asan
 :
 [
 PASS
@@ -693,15 +584,14 @@ linux
 "
 )
 and
-not
 debug
 and
-asan
+not
+fission
 :
 [
-NOTRUN
 PASS
-TIMEOUT
+NOTRUN
 ]
 if
 (
@@ -715,9 +605,6 @@ linux
 and
 not
 debug
-and
-not
-asan
 :
 [
 PASS
@@ -745,13 +632,12 @@ linux
 "
 )
 and
-not
 debug
 and
-asan
+not
+fission
 :
 [
-NOTRUN
 PASS
 TIMEOUT
 ]
@@ -767,9 +653,6 @@ linux
 and
 not
 debug
-and
-not
-asan
 :
 [
 PASS
@@ -797,15 +680,14 @@ linux
 "
 )
 and
-not
 debug
 and
-asan
+not
+fission
 :
 [
-NOTRUN
 PASS
-TIMEOUT
+NOTRUN
 ]
 if
 (
@@ -819,9 +701,6 @@ linux
 and
 not
 debug
-and
-not
-asan
 :
 [
 PASS
@@ -933,29 +812,6 @@ linux
 and
 not
 debug
-and
-asan
-:
-[
-NOTRUN
-PASS
-TIMEOUT
-]
-if
-(
-os
-=
-=
-"
-linux
-"
-)
-and
-not
-debug
-and
-not
-asan
 :
 [
 PASS
