--- a/testing/web-platform/meta/html/browsers/browsing-the-web/__dir__.ini
+++ b/testing/web-platform/meta/html/browsers/browsing-the-web/__dir__.ini
@@ -20,6 +20,7 @@ AllocateProtoAndIfaceCache
 AtomizeAndCopyChars
 AtomizeAndCopyCharsNonStaticValidLengthFromLookup
 Create
+Define
 DoGetOrCreateDOMReflector
 GetExistingProperty
 GetOrCreateDOMReflector
@@ -31,6 +32,16 @@ JS
 :
 :
 ModuleEvaluate
+JS
+:
+:
+loader
+:
+:
+ModuleLoaderBase
+:
+:
+EvaluateModule
 ModuleEvaluate
 NativeDefineDataProperty
 NewObject
@@ -226,10 +237,30 @@ mozilla
 dom
 :
 :
+ScriptLoadHandler
+:
+:
+OnStreamComplete
+mozilla
+:
+:
+dom
+:
+:
 URL
 :
 :
 Constructor
+mozilla
+:
+:
+dom
+:
+:
+Window_Binding
+:
+:
+_resolve
 mozilla
 :
 :
