--- a/testing/web-platform/meta/css/css-writing-modes/abs-pos-replaced-vrl-001.html.ini
+++ b/testing/web-platform/meta/css/css-writing-modes/abs-pos-replaced-vrl-001.html.ini
@@ -14,9 +14,31 @@ html
 expected
 :
 if
-asan
-and
 swgl
+and
+debug
+and
+(
+os
+=
+=
+"
+linux
+"
+)
+and
+not
+fission
+:
+[
+PASS
+FAIL
+]
+if
+swgl
+and
+not
+debug
 :
 [
 PASS
