--- a/testing/web-platform/meta/digital-credentials/allow-attribute.https.html.ini
+++ b/testing/web-platform/meta/digital-credentials/allow-attribute.https.html.ini
@@ -79,6 +79,18 @@ true
 ]
 expected
 :
+if
+os
+=
+=
+"
+android
+"
+:
+[
+FAIL
+TIMEOUT
+]
 FAIL
 [
 Policy
@@ -105,6 +117,18 @@ true
 ]
 expected
 :
+if
+os
+=
+=
+"
+android
+"
+:
+[
+FAIL
+NOTRUN
+]
 FAIL
 [
 Policy
@@ -143,6 +167,7 @@ android
 [
 TIMEOUT
 FAIL
+NOTRUN
 ]
 FAIL
 [
@@ -212,6 +237,18 @@ false
 ]
 expected
 :
+if
+os
+=
+=
+"
+linux
+"
+:
+[
+TIMEOUT
+FAIL
+]
 if
 os
 =
@@ -268,7 +305,19 @@ mac
 "
 :
 [
+TIMEOUT
 FAIL
+]
+if
+os
+=
+=
+"
+linux
+"
+:
+[
+NOTRUN
 TIMEOUT
 ]
 NOTRUN
@@ -318,8 +367,8 @@ mac
 "
 :
 [
-TIMEOUT
 NOTRUN
+TIMEOUT
 ]
 NOTRUN
 [
