--- a/testing/web-platform/meta/fedcm/lfedcm-identity.discovery.tentative.sub.https.html.ini
+++ b/testing/web-platform/meta/fedcm/lfedcm-identity.discovery.tentative.sub.https.html.ini
@@ -21,6 +21,94 @@ os
 =
 =
 "
+linux
+"
+)
+and
+fission
+and
+(
+processor
+=
+=
+"
+x86_64
+"
+)
+and
+not
+asan
+and
+tsan
+:
+[
+OK
+TIMEOUT
+]
+if
+(
+os
+=
+=
+"
+linux
+"
+)
+and
+fission
+and
+(
+processor
+=
+=
+"
+x86_64
+"
+)
+and
+not
+asan
+and
+not
+tsan
+:
+[
+TIMEOUT
+OK
+]
+if
+(
+os
+=
+=
+"
+linux
+"
+)
+and
+fission
+and
+(
+processor
+=
+=
+"
+x86_64
+"
+)
+and
+asan
+:
+[
+OK
+TIMEOUT
+]
+if
+(
+os
+=
+=
+"
 win
 "
 )
@@ -61,8 +149,8 @@ x86
 )
 :
 [
-OK
 TIMEOUT
+OK
 ]
 if
 (
@@ -75,6 +163,15 @@ linux
 )
 and
 fission
+and
+(
+processor
+=
+=
+"
+x86
+"
+)
 :
 [
 OK
@@ -106,6 +203,94 @@ os
 =
 =
 "
+linux
+"
+)
+and
+fission
+and
+(
+processor
+=
+=
+"
+x86_64
+"
+)
+and
+not
+asan
+and
+tsan
+:
+[
+PASS
+TIMEOUT
+]
+if
+(
+os
+=
+=
+"
+linux
+"
+)
+and
+fission
+and
+(
+processor
+=
+=
+"
+x86_64
+"
+)
+and
+not
+asan
+and
+not
+tsan
+:
+[
+TIMEOUT
+PASS
+]
+if
+(
+os
+=
+=
+"
+linux
+"
+)
+and
+fission
+and
+(
+processor
+=
+=
+"
+x86_64
+"
+)
+and
+asan
+:
+[
+PASS
+TIMEOUT
+]
+if
+(
+os
+=
+=
+"
 win
 "
 )
@@ -149,9 +334,9 @@ x86
 )
 :
 [
+TIMEOUT
 PASS
 NOTRUN
-TIMEOUT
 ]
 if
 (
@@ -164,6 +349,15 @@ linux
 )
 and
 fission
+and
+(
+processor
+=
+=
+"
+x86
+"
+)
 :
 [
 PASS
@@ -242,4 +436,44 @@ x86
 PASS
 TIMEOUT
 NOTRUN
+]
+[
+Cross
+-
+origin
+identity
+credential
+discovery
+works
+using
+the
+effectiveQueryURL
+]
+expected
+:
+if
+(
+os
+=
+=
+"
+win
+"
+)
+and
+not
+debug
+and
+(
+processor
+=
+=
+"
+x86_64
+"
+)
+:
+[
+PASS
+TIMEOUT
 ]
