Bug 1629824 - [browser] Re-enable browser startup tests for Windows ASAN builds depending on startup profiling. r=mconley
Differential Revision: https://phabricator.services.mozilla.com/D226448

UltraBlame original commit: b0fbe4b109bf5531cfc0b7334f6ad9194450aa4d

--- a/browser/base/content/test/performance/io/browser.toml
+++ b/browser/base/content/test/performance/io/browser.toml
@@ -26,19 +26,6 @@ to
 bug
 1549729
 .
-#
-Disabled
-on
-Windows
-asan
-due
-to
-intermittent
-startup
-hangs
-bug
-1629824
-.
 skip
 -
 if
@@ -51,6 +38,14 @@ debug
 tsan
 "
 "
+os
+=
+=
+'
+linux
+'
+&
+&
 asan
 "
 ]
