Bug 1925288 - Clean up webcodecs prefs in tests (performance and WPT). r=chunmin,aosmond,perftest-reviewers,sparky
Differential Revision: https://phabricator.services.mozilla.com/D225986

UltraBlame original commit: b445a11895af503f9b879f8a49ecfb410ad9394a

--- a/testing/web-platform/meta/webcodecs/video-frame-serialization.any.js.ini
+++ b/testing/web-platform/meta/webcodecs/video-frame-serialization.any.js.ini
@@ -11,19 +11,6 @@ worker
 .
 html
 ]
-prefs
-:
-[
-dom
-.
-media
-.
-webcodecs
-.
-enabled
-:
-true
-]
 expected
 :
 if
@@ -41,6 +28,7 @@ fission
 [
 OK
 TIMEOUT
+FAIL
 ]
 [
 video
@@ -53,19 +41,6 @@ any
 .
 html
 ]
-prefs
-:
-[
-dom
-.
-media
-.
-webcodecs
-.
-enabled
-:
-true
-]
 expected
 :
 if
@@ -83,4 +58,5 @@ fission
 [
 OK
 TIMEOUT
+FAIL
 ]
