--- a/testing/web-platform/meta/webcodecs/videoColorSpace.any.js.ini
+++ b/testing/web-platform/meta/webcodecs/videoColorSpace.any.js.ini
@@ -7,19 +7,6 @@ worker
 .
 html
 ]
-prefs
-:
-[
-dom
-.
-media
-.
-webcodecs
-.
-enabled
-:
-true
-]
 expected
 :
 if
@@ -37,6 +24,7 @@ fission
 [
 OK
 TIMEOUT
+FAIL
 ]
 [
 videoColorSpace
@@ -45,19 +33,6 @@ any
 .
 html
 ]
-prefs
-:
-[
-dom
-.
-media
-.
-webcodecs
-.
-enabled
-:
-true
-]
 expected
 :
 if
@@ -75,4 +50,5 @@ fission
 [
 OK
 TIMEOUT
+FAIL
 ]
