--- a/testing/web-platform/meta/webcodecs/videoFrame-construction.crossOriginSource.sub.html.ini
+++ b/testing/web-platform/meta/webcodecs/videoFrame-construction.crossOriginSource.sub.html.ini
@@ -9,19 +9,6 @@ sub
 .
 html
 ]
-prefs
-:
-[
-dom
-.
-media
-.
-webcodecs
-.
-enabled
-:
-true
-]
 expected
 :
 if
@@ -42,6 +29,7 @@ swgl
 [
 OK
 TIMEOUT
+FAIL
 ]
 [
 videoFrame
@@ -53,19 +41,6 @@ crossOriginSource
 sub
 .
 html
-]
-prefs
-:
-[
-dom
-.
-media
-.
-webcodecs
-.
-enabled
-:
-true
 ]
 [
 Test
