Bug 1926537 - Update test expectations for console/console-log-large-array.any.js. CLOSED TREE
Differential Revision: https://phabricator.services.mozilla.com/D226744

UltraBlame original commit: 1fd874fb28a2db5c84df8126967b1d668856cbb9

--- a/testing/web-platform/meta/console/console-log-large-array.any.js.ini
+++ b/testing/web-platform/meta/console/console-log-large-array.any.js.ini
@@ -15,12 +15,6 @@ html
 ]
 expected
 :
-if
-asan
-and
-not
-fission
-:
 [
 OK
 TIMEOUT
@@ -55,6 +49,12 @@ array
 any
 .
 html
+]
+expected
+:
+[
+OK
+TIMEOUT
 ]
 [
 console
