Bug 1926381 - Integrate MLSuggest with UrlbarProviderQuickSuggest and implement Yelp ML suggestions. r=daisuke
This adds a new Suggest backend for ML-based suggestions called
`SuggestBackendMl`. Before, with the JS and Rust backends, only one backend was
enabled at a time, but both the ML and Rust backends can be enabled at the same
time since we will want to serve suggestions from both for the foreseeable
future. Features can support ML suggestions by implementing the new
`BaseFeature.mlIntent` getter and handling ML suggestions in `makeResult()`.
Each feature can decide whether it supports ML suggestions and whether they
should be preferred over Rust suggestions.

I've updated the Yelp feature to hook into this, since Yelp suggestions are
supported by the ML model that Chidam is working on. If ML is enabled, then the
feature will only serve ML suggestions. I'm not sure if that's what we want long
term, but for now that will make it clear to people which backend is being used
while we develop this feature.

The `quickSuggestMlEnabled` variable/pref determines whether the ML backend is
enabled. The `yelpMlEnabled` variable/pref determines whether Yelp ML
suggestions are enabled. We can create similar variable/prefs for each feature
that supports ML suggestions so that they can be toggled independently of each
other.

Other changes:

Move the `is_sponsored` logic out of the Rust backend and into the provider.
Otherwise it would need to be duplicated in the ML backend too.

Depends on D224523

Differential Revision: https://phabricator.services.mozilla.com/D226736

UltraBlame original commit: 883bbd49680489a62e2dbfd1b3db62adbf29e713

--- a/toolkit/components/nimbus/FeatureManifest.yaml
+++ b/toolkit/components/nimbus/FeatureManifest.yaml
@@ -3037,6 +3037,36 @@ remote
 settings
 configuration
 .
+quickSuggestMlEnabled
+:
+type
+:
+boolean
+fallbackPref
+:
+browser
+.
+urlbar
+.
+quicksuggest
+.
+mlEnabled
+description
+:
+>
+-
+Whether
+Suggest
+will
+use
+the
+ML
+backend
+in
+addition
+to
+Rust
+.
 quickSuggestNonSponsoredEnabled
 :
 type
@@ -4195,6 +4225,39 @@ to
 trigger
 the
 suggestion
+.
+yelpMlEnabled
+:
+type
+:
+boolean
+fallbackPref
+:
+browser
+.
+urlbar
+.
+yelp
+.
+mlEnabled
+description
+:
+>
+-
+Whether
+Yelp
+suggestions
+will
+be
+served
+from
+the
+Suggest
+ML
+backend
+instead
+of
+Rust
 .
 yelpFeatureGate
 :
