Bug 1922247 - Change Micah to Peer Emeritus in Downloads. r=Gijs,zeid
Differential Revision: https://phabricator.services.mozilla.com/D224320

UltraBlame original commit: d0058c7c6b9a8634f9b1cd48989d3ed6d2a4fe73

--- a/mots.yaml
+++ b/mots.yaml
@@ -120,13 +120,13 @@ updated_at
 -
 10
 -
-16T08
+24T10
 :
-28
+10
 :
-06
+07
 .
-317673
+594281
 +
 00
 :
@@ -14755,6 +14755,11 @@ Amadini
 -
 Shawn
 Wilsher
+peers_emeritus
+:
+-
+*
+micah
 owners
 :
 -
@@ -14765,9 +14770,6 @@ peers
 -
 *
 Gijs
--
-*
-micah
 machine_name
 :
 download_manager
@@ -19098,7 +19100,7 @@ hashes
 :
 config
 :
-7217f00cccafd42ed649d638849425ed6356310e
+45979f8b7cf98f7d77b28ef130a4671b42998e66
 export
 :
-3960a6fc6efb357302da10709df7d617a7660bd1
+0be99838aa64c6cb419c3805e5cec0a50e83a2db
