--- a/dom/xslt/tests/browser/browser.toml
+++ b/dom/xslt/tests/browser/browser.toml
@@ -30,198 +30,9 @@ if
 =
 [
 "
-os
-=
-=
-'
-mac
-'
-&
-&
-os_version
-=
-=
-'
-11
-.
-20
-'
-&
-&
-arch
-=
-=
-'
-aarch64
-'
-&
-&
-opt
+true
 "
-#
-Bug
-1776052
-"
-os
-=
-=
-'
-mac
-'
-&
-&
-os_version
-=
-=
-'
-10
-.
-15
-'
-&
-&
-processor
-=
-=
-'
-x86_64
-'
-&
-&
-opt
-"
-#
-Bug
-1776052
-"
-os
-=
-=
-'
-win
-'
-&
-&
-os_version
-=
-=
-'
-11
-.
-2009
-'
-&
-&
-processor
-=
-=
-'
-x86
-'
-&
-&
-opt
-"
-#
-Bug
-1776052
-"
-os
-=
-=
-'
-win
-'
-&
-&
-os_version
-=
-=
-'
-11
-.
-2009
-'
-&
-&
-processor
-=
-=
-'
-x86_64
-'
-&
-&
-opt
-"
-#
-Bug
-1776052
-"
-os
-=
-=
-'
-win
-'
-&
-&
-os_version
-=
-=
-'
-11
-.
-2009
-'
-&
-&
-processor
-=
-=
-'
-x86_64
-'
-&
-&
-debug
-"
-#
-Bug
-1776052
-"
-os
-=
-=
-'
-linux
-'
-&
-&
-os_version
-=
-=
-'
-18
-.
-04
-'
-&
-&
-processor
-=
-=
-'
-x86_64
-'
-&
-&
-opt
-&
-&
-socketprocess_networking
-"
-#
-Bug
-1776052
 ]
+#
+bug
+1776052
