Bug 1925993, enable changing extensions.formautofill.creditCards.supported preference in nimbus, r=credential-management-reviewers,issammani
Differential Revision: https://phabricator.services.mozilla.com/D226326

UltraBlame original commit: cb0abfb4ec4493ede0e4382fa183d221f511fbe5

--- a/toolkit/components/nimbus/FeatureManifest.yaml
+++ b/toolkit/components/nimbus/FeatureManifest.yaml
@@ -9400,6 +9400,61 @@ to
 use
 address
 autofill
+creditcards
+-
+autofill
+-
+enabled
+:
+description
+:
+Credit
+card
+autofill
+is
+enabled
+in
+all
+regions
+owner
+:
+issozi
+mozilla
+.
+com
+hasExposure
+:
+false
+variables
+:
+creditcardsSupported
+:
+description
+:
+Enable
+credit
+card
+autofill
+in
+all
+regions
+type
+:
+string
+setPref
+:
+branch
+:
+default
+pref
+:
+extensions
+.
+formautofill
+.
+creditCards
+.
+supported
 shellService
 :
 description
