Bug 1926723 - Rename `awesomebar.{engagement, abandonment}` to `urlbar.*`. r=Roger,android-reviewers
Differential Revision: https://phabricator.services.mozilla.com/D226725

UltraBlame original commit: 6699af9133ff815248f4b8a24259b429afb32571

--- a/mobile/android/fenix/app/metrics.yaml
+++ b/mobile/android/fenix/app/metrics.yaml
@@ -70731,6 +70731,8 @@ tags
 :
 -
 Search
+urlbar
+:
 engagement
 :
 type
@@ -70779,6 +70781,24 @@ cgi
 id
 =
 1878434
+-
+https
+:
+/
+/
+bugzilla
+.
+mozilla
+.
+org
+/
+show_bug
+.
+cgi
+?
+id
+=
+1926723
 data_reviews
 :
 -
@@ -70880,6 +70900,24 @@ cgi
 id
 =
 1878434
+-
+https
+:
+/
+/
+bugzilla
+.
+mozilla
+.
+org
+/
+show_bug
+.
+cgi
+?
+id
+=
+1926723
 data_reviews
 :
 -
