Bug 1926056 - Newtab new ad size and UI variants r=home-newtab-reviewers,nbarrett,amy
Differential Revision: https://phabricator.services.mozilla.com/D226543

UltraBlame original commit: a45040fd76714166954dff37f6664a42dcb584b1

--- a/browser/components/newtab/metrics.yaml
+++ b/browser/components/newtab/metrics.yaml
@@ -6231,12 +6231,46 @@ sponsored
 has
 an
 ad
-shim
+callback
 )
 .
 type
 :
 boolean
+format
+:
+&
+format
+description
+:
+For
+sponsored
+content
+only
+was
+it
+a
+standard
+spoc
+or
+a
+new
+IAB
+rectangle
+spoc
+.
+Can
+be
+"
+spoc
+"
+or
+"
+rectangle
+"
+type
+:
+string
 position
 :
 &
@@ -6715,6 +6749,10 @@ is_sponsored
 :
 *
 is_sponsored_pocket
+format
+:
+*
+format
 position
 :
 *
@@ -6902,6 +6940,10 @@ is_sponsored
 :
 *
 is_sponsored_pocket
+format
+:
+*
+format
 position
 :
 *
@@ -7174,6 +7216,10 @@ is_sponsored
 :
 *
 is_sponsored_pocket
+format
+:
+*
+format
 position
 :
 *
