Bug 1925104 - Adjust mac/linux skip-if conditions to include os_version/architecture on remaining browser-chrome manifests. r=aryx,settings-reviewers,media-playback-reviewers,sessionstore-reviewers,omc-reviewers,urlbar-reviewers,alwu,hanna_a,sfoster
Differential Revision: https://phabricator.services.mozilla.com/D225870

UltraBlame original commit: 6bb94e56c403ef732c1a928c7217c8b44d670b66

--- a/browser/base/content/test/performance/browser.toml
+++ b/browser/base/content/test/performance/browser.toml
@@ -333,6 +333,24 @@ linux
 '
 &
 &
+os_version
+=
+=
+'
+18
+.
+04
+'
+&
+&
+processor
+=
+=
+'
+x86_64
+'
+&
+&
 socketprocess_networking
 "
 #
@@ -410,7 +428,30 @@ if
 =
 [
 "
-apple_catalina
+os
+=
+=
+'
+mac
+'
+&
+&
+os_version
+=
+=
+'
+11
+.
+20
+'
+&
+&
+arch
+=
+=
+'
+aarch64
+'
 "
 #
 platform
@@ -533,6 +574,24 @@ linux
 '
 &
 &
+os_version
+=
+=
+'
+18
+.
+04
+'
+&
+&
+processor
+=
+=
+'
+x86_64
+'
+&
+&
 devedition
 "
 #
@@ -544,6 +603,53 @@ os
 =
 '
 mac
+'
+&
+&
+os_version
+=
+=
+'
+11
+.
+20
+'
+&
+&
+arch
+=
+=
+'
+aarch64
+'
+"
+#
+Bug
+1531417
+"
+os
+=
+=
+'
+mac
+'
+&
+&
+os_version
+=
+=
+'
+10
+.
+15
+'
+&
+&
+processor
+=
+=
+'
+x86_64
 '
 "
 #
@@ -590,7 +696,30 @@ if
 =
 [
 "
-apple_catalina
+os
+=
+=
+'
+mac
+'
+&
+&
+os_version
+=
+=
+'
+11
+.
+20
+'
+&
+&
+arch
+=
+=
+'
+aarch64
+'
 "
 #
 Bug
@@ -604,8 +733,25 @@ mac
 '
 &
 &
-!
-debug
+os_version
+=
+=
+'
+10
+.
+15
+'
+&
+&
+processor
+=
+=
+'
+x86_64
+'
+&
+&
+opt
 "
 #
 Bug
@@ -619,8 +765,25 @@ linux
 '
 &
 &
-!
-debug
+os_version
+=
+=
+'
+18
+.
+04
+'
+&
+&
+processor
+=
+=
+'
+x86_64
+'
+&
+&
+opt
 "
 #
 Bug
