--- a/browser/components/aboutlogins/tests/browser/browser.toml
+++ b/browser/components/aboutlogins/tests/browser/browser.toml
@@ -140,14 +140,25 @@ linux
 '
 &
 &
-bits
+os_version
 =
 =
-64
+'
+18
+.
+04
+'
 &
 &
-!
-debug
+processor
+=
+=
+'
+x86_64
+'
+&
+&
+opt
 "
 #
 Bug
@@ -166,11 +177,33 @@ if
 =
 [
 "
-apple_catalina
+os
+=
+=
+'
+mac
+'
 &
 &
-!
-debug
+os_version
+=
+=
+'
+10
+.
+15
+'
+&
+&
+processor
+=
+=
+'
+x86_64
+'
+&
+&
+opt
 "
 ]
 #
@@ -279,12 +312,6 @@ linux
 '
 &
 &
-bits
-=
-=
-64
-&
-&
 os_version
 =
 =
@@ -292,6 +319,14 @@ os_version
 18
 .
 04
+'
+&
+&
+processor
+=
+=
+'
+x86_64
 '
 "
 ]
@@ -413,10 +448,22 @@ linux
 '
 &
 &
-bits
+os_version
 =
 =
-64
+'
+18
+.
+04
+'
+&
+&
+processor
+=
+=
+'
+x86_64
+'
 "
 ]
 #
@@ -441,6 +488,24 @@ os
 '
 linux
 '
+&
+&
+os_version
+=
+=
+'
+18
+.
+04
+'
+&
+&
+processor
+=
+=
+'
+x86_64
+'
 "
 ]
 #
@@ -464,6 +529,24 @@ os
 =
 '
 linux
+'
+&
+&
+os_version
+=
+=
+'
+18
+.
+04
+'
+&
+&
+processor
+=
+=
+'
+x86_64
 '
 "
 ]
