--- a/browser/components/sessionstore/test/browser.toml
+++ b/browser/components/sessionstore/test/browser.toml
@@ -420,18 +420,36 @@ if
 =
 [
 "
-verify
-&
-&
-debug
-&
-&
 os
 =
 =
 '
 linux
 '
+&
+&
+os_version
+=
+=
+'
+18
+.
+04
+'
+&
+&
+processor
+=
+=
+'
+x86_64
+'
+&
+&
+debug
+&
+&
+verify
 "
 ]
 tags
@@ -537,8 +555,7 @@ x86_64
 '
 &
 &
-!
-debug
+opt
 "
 ]
 #
@@ -853,7 +870,30 @@ if
 =
 [
 "
-apple_silicon
+os
+=
+=
+'
+mac
+'
+&
+&
+os_version
+=
+=
+'
+11
+.
+20
+'
+&
+&
+arch
+=
+=
+'
+aarch64
+'
 "
 #
 Disabled
