--- a/browser/components/urlbar/tests/browser/browser.toml
+++ b/browser/components/urlbar/tests/browser/browser.toml
@@ -48,6 +48,14 @@ os_version
 '
 &
 &
+processor
+=
+=
+'
+x86_64
+'
+&
+&
 asan
 "
 #
@@ -70,6 +78,14 @@ os_version
 18
 .
 04
+'
+&
+&
+processor
+=
+=
+'
+x86_64
 '
 &
 &
@@ -452,7 +468,30 @@ if
 =
 [
 "
-apple_catalina
+os
+=
+=
+'
+mac
+'
+&
+&
+os_version
+=
+=
+'
+10
+.
+15
+'
+&
+&
+processor
+=
+=
+'
+x86_64
+'
 &
 &
 debug
@@ -549,6 +588,24 @@ os
 =
 '
 linux
+'
+&
+&
+os_version
+=
+=
+'
+18
+.
+04
+'
+&
+&
+processor
+=
+=
+'
+x86_64
 '
 &
 &
@@ -1072,15 +1129,33 @@ if
 =
 [
 "
-verify
-&
-&
 os
 =
 =
 '
 linux
 '
+&
+&
+os_version
+=
+=
+'
+18
+.
+04
+'
+&
+&
+processor
+=
+=
+'
+x86_64
+'
+&
+&
+verify
 "
 ]
 #
@@ -2834,19 +2909,64 @@ if
 =
 [
 "
-(
 os
 =
 =
 '
 mac
 '
-)
+&
+&
+os_version
+=
+=
+'
+10
+.
+15
+'
+&
+&
+processor
+=
+=
+'
+x86_64
+'
 "
-]
 #
 bug
 1570474
+"
+os
+=
+=
+'
+mac
+'
+&
+&
+os_version
+=
+=
+'
+11
+.
+20
+'
+&
+&
+arch
+=
+=
+'
+aarch64
+'
+"
+#
+bug
+1570474
+]
 [
 "
 browser_urlbar_telemetry
@@ -3167,6 +3287,24 @@ os
 =
 '
 linux
+'
+&
+&
+os_version
+=
+=
+'
+18
+.
+04
+'
+&
+&
+processor
+=
+=
+'
+x86_64
 '
 &
 &
