--- a/dom/base/test/browser.toml
+++ b/dom/base/test/browser.toml
@@ -218,10 +218,22 @@ linux
 '
 &
 &
-bits
+os_version
 =
 =
-64
+'
+18
+.
+04
+'
+&
+&
+processor
+=
+=
+'
+x86_64
+'
 "
 #
 Bug
@@ -235,10 +247,54 @@ mac
 '
 &
 &
-fission
+os_version
+=
+=
+'
+10
+.
+15
+'
+&
+&
+processor
+=
+=
+'
+x86_64
+'
 "
 #
-Bug
+bug
+1618098
+"
+os
+=
+=
+'
+mac
+'
+&
+&
+os_version
+=
+=
+'
+11
+.
+20
+'
+&
+&
+arch
+=
+=
+'
+aarch64
+'
+"
+#
+bug
 1618098
 ]
 [
@@ -305,8 +361,15 @@ os_version
 '
 &
 &
-!
-debug
+processor
+=
+=
+'
+x86_64
+'
+&
+&
+opt
 "
 ]
 #
@@ -583,7 +646,7 @@ if
 =
 [
 "
-fission
+true
 "
 ]
 #
@@ -627,14 +690,36 @@ win
 '
 &
 &
-!
-debug
+opt
 "
 #
 Bug
 1505235
 "
-apple_catalina
+os
+=
+=
+'
+mac
+'
+&
+&
+os_version
+=
+=
+'
+10
+.
+15
+'
+&
+&
+processor
+=
+=
+'
+x86_64
+'
 "
 #
 Bug
