--- a/dom/ipc/tests/browser.toml
+++ b/dom/ipc/tests/browser.toml
@@ -125,20 +125,6 @@ change
 the
 priority
 .
-skip
--
-if
-=
-[
-"
-os
-=
-=
-'
-android
-'
-"
-]
 support
 -
 files
@@ -586,20 +572,6 @@ browser_wpi_isolate_high_value
 js
 "
 ]
-run
--
-if
-=
-[
-"
-fission
-"
-]
-#
-Only
-relevant
-for
-fission
 support
 -
 files
@@ -624,7 +596,30 @@ if
 =
 [
 "
-apple_catalina
+os
+=
+=
+'
+mac
+'
+&
+&
+os_version
+=
+=
+'
+10
+.
+15
+'
+&
+&
+processor
+=
+=
+'
+x86_64
+'
 &
 &
 debug
