--- a/dom/tests/browser/browser.toml
+++ b/dom/tests/browser/browser.toml
@@ -420,10 +420,22 @@ linux
 '
 &
 &
-bits
+os_version
 =
 =
-64
+'
+18
+.
+04
+'
+&
+&
+processor
+=
+=
+'
+x86_64
+'
 "
 #
 Bug
@@ -496,7 +508,7 @@ if
 =
 [
 "
-fission
+true
 "
 ]
 skip
@@ -571,18 +583,36 @@ if
 =
 [
 "
-verify
-&
-&
-debug
-&
-&
 os
 =
 =
 '
 linux
 '
+&
+&
+os_version
+=
+=
+'
+18
+.
+04
+'
+&
+&
+processor
+=
+=
+'
+x86_64
+'
+&
+&
+debug
+&
+&
+verify
 "
 ]
 support
@@ -713,14 +743,44 @@ os_version
 '
 &
 &
-!
-debug
+processor
+=
+=
+'
+x86_64
+'
+&
+&
+opt
 "
 #
 Bug
 1907085
 "
-apple_catalina
+os
+=
+=
+'
+mac
+'
+&
+&
+os_version
+=
+=
+'
+10
+.
+15
+'
+&
+&
+processor
+=
+=
+'
+x86_64
+'
 "
 #
 Bug
@@ -838,14 +898,25 @@ linux
 '
 &
 &
-bits
+os_version
 =
 =
-64
+'
+18
+.
+04
+'
 &
 &
-!
-debug
+processor
+=
+=
+'
+x86_64
+'
+&
+&
+opt
 "
 ]
 #
@@ -933,6 +1004,24 @@ os
 =
 '
 linux
+'
+&
+&
+os_version
+=
+=
+'
+18
+.
+04
+'
+&
+&
+processor
+=
+=
+'
+x86_64
 '
 &
 &
