--- a/toolkit/components/httpsonlyerror/tests/browser/browser.toml
+++ b/toolkit/components/httpsonlyerror/tests/browser/browser.toml
@@ -102,7 +102,30 @@ asan
 Bug
 1775881
 "
-apple_catalina
+os
+=
+=
+'
+mac
+'
+&
+&
+os_version
+=
+=
+'
+10
+.
+15
+'
+&
+&
+processor
+=
+=
+'
+x86_64
+'
 &
 &
 debug
@@ -170,29 +193,6 @@ file_errorpage_www_suggestion
 html
 "
 ]
-skip
--
-if
-=
-[
-"
-os
-=
-=
-'
-android
-'
-"
-]
-#
-no
-https
--
-only
-errorpage
-support
-in
-android
 [
 "
 browser_exception
