--- a/toolkit/components/messaging-system/schemas/SpecialMessageActionSchemas/test/browser/browser.toml
+++ b/toolkit/components/messaging-system/schemas/SpecialMessageActionSchemas/test/browser/browser.toml
@@ -219,7 +219,6 @@ if
 =
 [
 "
-(
 os
 =
 =
@@ -230,7 +229,6 @@ win
 &
 !
 msix
-)
 "
 ]
 #
@@ -249,7 +247,6 @@ if
 =
 [
 "
-(
 os
 =
 =
@@ -259,7 +256,6 @@ win
 &
 &
 msix
-)
 "
 ]
 [
@@ -296,7 +292,30 @@ if
 =
 [
 "
-apple_catalina
+os
+=
+=
+'
+mac
+'
+&
+&
+os_version
+=
+=
+'
+10
+.
+15
+'
+&
+&
+processor
+=
+=
+'
+x86_64
+'
 &
 &
 debug
