--- a/toolkit/components/reader/tests/browser/browser.toml
+++ b/toolkit/components/reader/tests/browser/browser.toml
@@ -320,7 +320,30 @@ if
 =
 [
 "
-apple_catalina
+os
+=
+=
+'
+mac
+'
+&
+&
+os_version
+=
+=
+'
+10
+.
+15
+'
+&
+&
+processor
+=
+=
+'
+x86_64
+'
 "
 #
 Bug
