Bug 1926194 - Make tests under `editing/plaintext-only` not allow to pass with `<br>` elements when `white-space` is `pre`, `pre-wrap` or `pre-line` r=m_kato
Currently, the expectations include `<br>` element cases even if `white-space`
value is `pre`, `pre-wrap` or `pre-line`. However, in these cases, only `\n`
should be allowed because `<br>` elements are not converted to `\n` if web apps
gets the editing host value with `.textContent`.

Differential Revision: https://phabricator.services.mozilla.com/D226441

UltraBlame original commit: 69bbad8c218d32f119ad2a87445ef1f067a7426c

--- a/testing/web-platform/meta/editing/plaintext-only/insertText.html.ini
+++ b/testing/web-platform/meta/editing/plaintext-only/insertText.html.ini
@@ -916,6 +916,82 @@ expected
 :
 FAIL
 [
+execCommand
+(
+"
+insertText
+"
+false
+"
+a
+"
+)
+when
+<
+p
+>
+<
+b
+>
+[
+\
+]
+AB
+<
+/
+b
+>
+<
+/
+p
+>
+and
+execCommand
+(
+"
+insertParagraph
+"
+)
+]
+expected
+:
+FAIL
+[
+Typing
+"
+a
+"
+when
+<
+p
+>
+<
+b
+>
+[
+\
+]
+AB
+<
+/
+b
+>
+<
+/
+p
+>
+and
+execCommand
+(
+"
+insertParagraph
+"
+)
+]
+expected
+:
+FAIL
+[
 insertText
 .
 html
@@ -1833,6 +1909,82 @@ expected
 :
 FAIL
 [
+execCommand
+(
+"
+insertText
+"
+false
+"
+a
+"
+)
+when
+<
+p
+>
+<
+b
+>
+[
+\
+]
+AB
+<
+/
+b
+>
+<
+/
+p
+>
+and
+execCommand
+(
+"
+insertParagraph
+"
+)
+]
+expected
+:
+FAIL
+[
+Typing
+"
+a
+"
+when
+<
+p
+>
+<
+b
+>
+[
+\
+]
+AB
+<
+/
+b
+>
+<
+/
+p
+>
+and
+execCommand
+(
+"
+insertParagraph
+"
+)
+]
+expected
+:
+FAIL
+[
 insertText
 .
 html
@@ -2743,6 +2895,82 @@ the
 preceding
 paragraph
 temporarily
+]
+expected
+:
+FAIL
+[
+execCommand
+(
+"
+insertText
+"
+false
+"
+a
+"
+)
+when
+<
+p
+>
+<
+b
+>
+[
+\
+]
+AB
+<
+/
+b
+>
+<
+/
+p
+>
+and
+execCommand
+(
+"
+insertParagraph
+"
+)
+]
+expected
+:
+FAIL
+[
+Typing
+"
+a
+"
+when
+<
+p
+>
+<
+b
+>
+[
+\
+]
+AB
+<
+/
+b
+>
+<
+/
+p
+>
+and
+execCommand
+(
+"
+insertParagraph
+"
+)
 ]
 expected
 :
