--- a/dom/tests/mochitest/pointerlock/mochitest.toml
+++ b/dom/tests/mochitest/pointerlock/mochitest.toml
@@ -311,6 +311,94 @@ os
 =
 =
 '
+linux
+'
+&
+&
+os_version
+=
+=
+'
+18
+.
+04
+'
+&
+&
+processor
+=
+=
+'
+x86_64
+'
+&
+&
+opt
+"
+#
+Bug
+1897207
+"
+os
+=
+=
+'
+mac
+'
+&
+&
+os_version
+=
+=
+'
+10
+.
+15
+'
+&
+&
+processor
+=
+=
+'
+x86_64
+'
+&
+&
+opt
+"
+#
+Bug
+1897207
+"
+os
+=
+=
+'
+win
+'
+&
+&
+os_version
+=
+=
+'
+11
+.
+2009
+'
+&
+&
+opt
+"
+#
+Bug
+1897207
+"
+os
+=
+=
+'
 android
 '
 "
