--- a/testing/web-platform/meta/WebCryptoAPI/derive_bits_keys/derived_bits_length.https.any.js.ini
+++ b/testing/web-platform/meta/WebCryptoAPI/derive_bits_keys/derived_bits_length.https.any.js.ini
@@ -36,6 +36,20 @@ expected
 :
 FAIL
 [
+X25519
+derivation
+with
+230
+as
+'
+length
+'
+parameter
+]
+expected
+:
+FAIL
+[
 derived_bits_length
 .
 https
@@ -65,6 +79,20 @@ X25519
 derivation
 with
 0
+as
+'
+length
+'
+parameter
+]
+expected
+:
+FAIL
+[
+X25519
+derivation
+with
+230
 as
 '
 length
