--- a/testing/web-platform/meta/css/css-conditional/container-queries/scroll-state/scroll-state-initially-overflowing.html.ini
+++ b/testing/web-platform/meta/css/css-conditional/container-queries/scroll-state/scroll-state-initially-overflowing.html.ini
@@ -39,3 +39,85 @@ bottom
 expected
 :
 FAIL
+[
+overflow
+:
+visible
+no
+overflowing
+content
+-
+no
+matches
+]
+expected
+:
+FAIL
+[
+overflow
+:
+auto
+no
+overflowing
+content
+-
+no
+matches
+]
+expected
+:
+FAIL
+[
+overflow
+:
+scroll
+no
+overflowing
+content
+-
+no
+matches
+]
+expected
+:
+FAIL
+[
+overflow
+:
+clip
+no
+overflowing
+content
+-
+no
+matches
+]
+expected
+:
+FAIL
+[
+overflow
+:
+visible
+overflowing
+content
+-
+no
+matches
+]
+expected
+:
+FAIL
+[
+overflow
+:
+clip
+overflowing
+content
+-
+no
+matches
+]
+expected
+:
+FAIL
