Bug 1926987 - [wpt-sync] Update web-platform-tests to 1d54ce0f9d4980018d7c41e6f9a9e997944f16ef, a=testonly
MANUAL PUSH: wpt sync bot

wpt-head: 1d54ce0f9d4980018d7c41e6f9a9e997944f16ef
wpt-type: landing

UltraBlame original commit: e690510f2c0546ddcf370ea898c9081be90a31b9

--- a/testing/web-platform/meta/cookie-store/cookieStore_subscribe_arguments.https.any.js.ini
+++ b/testing/web-platform/meta/cookie-store/cookieStore_subscribe_arguments.https.any.js.ini
@@ -88,8 +88,8 @@ win
 :
 [
 FAIL
-NOTRUN
 TIMEOUT
+NOTRUN
 ]
 FAIL
 [
@@ -103,9 +103,6 @@ serviceworker
 .
 html
 ]
-expected
-:
-TIMEOUT
 [
 cookieStore
 .
@@ -131,7 +128,7 @@ option
 ]
 expected
 :
-TIMEOUT
+FAIL
 [
 cookieStore
 .
@@ -141,7 +138,7 @@ idempotent
 ]
 expected
 :
-NOTRUN
+FAIL
 [
 CookieStore
 .
@@ -151,4 +148,4 @@ idempotent
 ]
 expected
 :
-NOTRUN
+FAIL
