--- a/testing/web-platform/meta/webrtc-extensions/RTCRtpEncodingParameters-scaleResolutionDownTo.https.html.ini
+++ b/testing/web-platform/meta/webrtc-extensions/RTCRtpEncodingParameters-scaleResolutionDownTo.https.html.ini
@@ -13,38 +13,6 @@ TIMEOUT
 [
 addTransceiver
 :
-Specifying
-scaling
-on
-some
-but
-not
-all
-encodings
-throws
-]
-expected
-:
-FAIL
-[
-setParameters
-:
-Specifying
-scaling
-on
-some
-but
-not
-all
-encodings
-throws
-]
-expected
-:
-FAIL
-[
-addTransceiver
-:
 scaleResolutionDownBy
 is
 ignored
@@ -136,6 +104,66 @@ reflect
 the
 current
 scaleResolutionDownTo
+]
+expected
+:
+FAIL
+[
+addTransceiver
+:
+Specifying
+scaling
+on
+a
+subset
+of
+active
+encodings
+throws
+]
+expected
+:
+FAIL
+[
+addTransceiver
+:
+Specifying
+scaling
+on
+inactive
+encodings
+is
+optional
+]
+expected
+:
+FAIL
+[
+setParameters
+:
+Specifying
+scaling
+on
+a
+subset
+of
+active
+encodings
+throws
+]
+expected
+:
+FAIL
+[
+setParameters
+:
+Specifying
+scaling
+on
+inactive
+encodings
+is
+optional
 ]
 expected
 :
