--- a/testing/web-platform/meta/workers/baseurl/alpha/sharedworker-in-worker.html.ini
+++ b/testing/web-platform/meta/workers/baseurl/alpha/sharedworker-in-worker.html.ini
@@ -10,6 +10,9 @@ html
 expected
 :
 if
+not
+tsan
+and
 (
 processor
 =
@@ -33,15 +36,15 @@ debug
 and
 not
 asan
-and
-not
-tsan
 :
 [
 OK
 ERROR
 ]
 if
+not
+tsan
+and
 (
 processor
 =
@@ -53,6 +56,13 @@ x86
 and
 not
 debug
+:
+[
+OK
+ERROR
+]
+if
+tsan
 :
 [
 OK
