--- a/testing/web-platform/meta/compute-pressure/compute_pressure_duplicate_updates.https.window.js.ini
+++ b/testing/web-platform/meta/compute-pressure/compute_pressure_duplicate_updates.https.window.js.ini
@@ -46,8 +46,28 @@ dedicated_worker
 expected
 :
 if
+(
+os
+=
+=
+"
+win
+"
+)
+and
 debug
 and
+(
+processor
+=
+=
+"
+x86_64
+"
+)
+:
+TIMEOUT
+if
 (
 os
 =
@@ -56,6 +76,8 @@ os
 linux
 "
 )
+and
+debug
 :
 [
 ERROR
