--- a/testing/web-platform/meta/compute-pressure/compute_pressure_timestamp_faster_collector.https.window.js.ini
+++ b/testing/web-platform/meta/compute-pressure/compute_pressure_timestamp_faster_collector.https.window.js.ini
@@ -50,8 +50,28 @@ dedicated_worker
 expected
 :
 if
+(
+os
+=
+=
+"
+win
+"
+)
+and
 debug
 and
+(
+processor
+=
+=
+"
+x86_64
+"
+)
+:
+TIMEOUT
+if
 (
 os
 =
@@ -60,6 +80,8 @@ os
 linux
 "
 )
+and
+debug
 and
 not
 fission
