--- a/testing/web-platform/meta/fedcm/lfedcm-identity.discovery.tentative.sub.https.html.ini
+++ b/testing/web-platform/meta/fedcm/lfedcm-identity.discovery.tentative.sub.https.html.ini
@@ -27,15 +27,6 @@ linux
 and
 fission
 and
-(
-processor
-=
-=
-"
-x86_64
-"
-)
-and
 not
 asan
 and
@@ -56,15 +47,6 @@ linux
 )
 and
 fission
-and
-(
-processor
-=
-=
-"
-x86_64
-"
-)
 and
 not
 asan
@@ -88,15 +70,6 @@ linux
 and
 fission
 and
-(
-processor
-=
-=
-"
-x86_64
-"
-)
-and
 asan
 :
 [
@@ -115,68 +88,8 @@ win
 and
 not
 debug
-and
-(
-processor
-=
-=
-"
-x86_64
-"
-)
 :
 TIMEOUT
-if
-(
-os
-=
-=
-"
-win
-"
-)
-and
-not
-debug
-and
-(
-processor
-=
-=
-"
-x86
-"
-)
-:
-[
-TIMEOUT
-OK
-]
-if
-(
-os
-=
-=
-"
-linux
-"
-)
-and
-fission
-and
-(
-processor
-=
-=
-"
-x86
-"
-)
-:
-[
-OK
-TIMEOUT
-]
 [
 Cross
 -
@@ -209,15 +122,6 @@ linux
 and
 fission
 and
-(
-processor
-=
-=
-"
-x86_64
-"
-)
-and
 not
 asan
 and
@@ -239,15 +143,6 @@ linux
 and
 fission
 and
-(
-processor
-=
-=
-"
-x86_64
-"
-)
-and
 not
 asan
 and
@@ -255,8 +150,9 @@ not
 tsan
 :
 [
-TIMEOUT
+NOTRUN
 PASS
+TIMEOUT
 ]
 if
 (
@@ -269,15 +165,6 @@ linux
 )
 and
 fission
-and
-(
-processor
-=
-=
-"
-x86_64
-"
-)
 and
 asan
 :
@@ -297,71 +184,10 @@ win
 and
 not
 debug
-and
-(
-processor
-=
-=
-"
-x86_64
-"
-)
 :
 [
+TIMEOUT
 NOTRUN
-TIMEOUT
-]
-if
-(
-os
-=
-=
-"
-win
-"
-)
-and
-not
-debug
-and
-(
-processor
-=
-=
-"
-x86
-"
-)
-:
-[
-TIMEOUT
-PASS
-NOTRUN
-]
-if
-(
-os
-=
-=
-"
-linux
-"
-)
-and
-fission
-and
-(
-processor
-=
-=
-"
-x86
-"
-)
-:
-[
-PASS
-TIMEOUT
 ]
 [
 Cross
@@ -389,25 +215,20 @@ os
 =
 =
 "
-win
+linux
 "
 )
+and
+fission
 and
 not
-debug
+asan
 and
-(
-processor
-=
-=
-"
-x86_64
-"
-)
+not
+tsan
 :
 [
 TIMEOUT
-PASS
 NOTRUN
 ]
 if
@@ -422,15 +243,6 @@ win
 and
 not
 debug
-and
-(
-processor
-=
-=
-"
-x86
-"
-)
 :
 [
 PASS
@@ -457,21 +269,34 @@ os
 =
 =
 "
+linux
+"
+)
+and
+fission
+and
+not
+asan
+and
+not
+tsan
+:
+[
+PASS
+TIMEOUT
+]
+if
+(
+os
+=
+=
+"
 win
 "
 )
 and
 not
 debug
-and
-(
-processor
-=
-=
-"
-x86_64
-"
-)
 :
 [
 PASS
