--- a/testing/web-platform/meta/fullscreen/api/element-request-fullscreen-timing.html.ini
+++ b/testing/web-platform/meta/fullscreen/api/element-request-fullscreen-timing.html.ini
@@ -48,8 +48,39 @@ linux
 "
 )
 and
-not
+fission
+and
 tsan
+:
+FAIL
+if
+(
+os
+=
+=
+"
+linux
+"
+)
+and
+not
+fission
+and
+debug
+:
+[
+PASS
+FAIL
+]
+if
+(
+os
+=
+=
+"
+linux
+"
+)
 and
 not
 fission
@@ -58,58 +89,6 @@ not
 debug
 :
 FAIL
-if
-(
-os
-=
-=
-"
-win
-"
-)
-and
-not
-debug
-and
-(
-processor
-=
-=
-"
-x86_64
-"
-)
-:
-[
-PASS
-FAIL
-]
-if
-(
-os
-=
-=
-"
-win
-"
-)
-and
-not
-debug
-and
-(
-processor
-=
-=
-"
-x86
-"
-)
-:
-[
-PASS
-FAIL
-]
 if
 (
 os
@@ -128,19 +107,6 @@ FAIL
 PASS
 TIMEOUT
 ]
-if
-(
-os
-=
-=
-"
-linux
-"
-)
-and
-tsan
-:
-FAIL
 [
 FAIL
 PASS
@@ -155,15 +121,6 @@ expected
 :
 if
 (
-processor
-=
-=
-"
-x86_64
-"
-)
-and
-(
 os
 =
 =
@@ -172,26 +129,15 @@ linux
 "
 )
 and
-not
 debug
 and
-not
-asan
-and
-not
-tsan
+fission
 :
+[
+FAIL
 PASS
+]
 if
-(
-processor
-=
-=
-"
-x86_64
-"
-)
-and
 (
 os
 =
@@ -203,29 +149,6 @@ win
 and
 not
 debug
-:
-PASS
-if
-(
-processor
-=
-=
-"
-x86
-"
-)
-and
-not
-debug
-and
-(
-os
-=
-=
-"
-win
-"
-)
 :
 PASS
 [
