--- a/testing/web-platform/meta/partitioned-popins/partitioned-popins.permission-self.tentative.sub.https.window.js.ini
+++ b/testing/web-platform/meta/partitioned-popins/partitioned-popins.permission-self.tentative.sub.https.window.js.ini
@@ -32,6 +32,38 @@ linux
 "
 )
 and
+not
+debug
+and
+(
+processor
+=
+=
+"
+x86_64
+"
+)
+and
+not
+tsan
+:
+[
+OK
+TIMEOUT
+]
+if
+not
+asan
+and
+(
+os
+=
+=
+"
+linux
+"
+)
+and
 debug
 and
 fission
